2023-11-29 개발사 전달 (id값 제작 완료)

--- a/03_mission/board_list_02.html
+++ b/03_mission/board_list_02.html
@@ -53,7 +53,7 @@
 			</div>
 			<!-- 미션 전부 완료시 아래 버튼이 변경되며 onclick기능이 생깁니다. board_list03.html 참고 -->
 			<div class="m_btn_wrap">
-				<button onclick="" class="btn_not_survey btn_middle_full">모든 미션 완료시 서베이가 활성화 됩니다.</button>
+				<button onclick="" id="btn_go_survey" class="btn_not_survey btn_middle_full">모든 미션 완료시 서베이가 활성화 됩니다.</button>
 			</div>
 			
 			<div class="mission_box">
@@ -64,14 +64,14 @@
 					</div>
 					<img src="../image/03_mission/stamp_mission_02.svg" alt="mission 02 - 1F">
 				</a>
-				<a href="./03/about.html" id="mission02" class="mission gap">
+				<a href="./03/about.html" id="mission03" class="mission gap">
 					<div class="text_wrap">
 						<h3 id="m_05_01_7">오브제갤러리 제품 월드컵</h3>
 						<p id="m_05_01_8">나의 원픽 오브제 컬렉션은?</p>
 					</div>
 					<img src="../image/03_mission/stamp_mission_03.svg" alt="mission 03 - 1F">
 				</a>
-				<a href="./05/about.html" id="mission02" class="mission gap">
+				<a href="./05/about.html" id="mission05" class="mission gap">
 					<div class="text_wrap">
 						<h3 id="m_05_01_11">SNS 공유하기</h3>
 						<p id="m_05_01_12">가장 재미있게 즐기는 나의 모습은?</p>
