--- a/05_survey/survey_all.html
+++ b/05_survey/survey_all.html
@@ -37,28 +37,28 @@
 					<div class="example chk_circle2_list">
 						<label for="survey_1_1" class="chk_circle2">
 							<input type="radio" name="survey_1" id="survey_1_1">
-							<span class="chk_circle2_txt" id="s_p_all_one">1</span>
+							<span class="chk_circle2_txt" id="s_p_all_one_q1">1</span>
 						</label>
 						<label for="survey_1_2" class="chk_circle2">
 							<input type="radio" name="survey_1" id="survey_1_2">
-							<span class="chk_circle2_txt" id="s_p_all_two">2</span>
+							<span class="chk_circle2_txt" id="s_p_all_two_q1">2</span>
 						</label>
 						<label for="survey_1_3" class="chk_circle2">
 							<input type="radio" name="survey_1" id="survey_1_3">
-							<span class="chk_circle2_txt" id="s_p_all_three">3</span>
+							<span class="chk_circle2_txt" id="s_p_all_three_q1">3</span>
 						</label>
 						<label for="survey_1_4" class="chk_circle2">
 							<input type="radio" name="survey_1" id="survey_1_4">
-							<span class="chk_circle2_txt" id="s_p_all_four">4</span>
+							<span class="chk_circle2_txt" id="s_p_all_four_q1">4</span>
 						</label>
 						<label for="survey_1_5" class="chk_circle2">
 							<input type="radio" name="survey_1" id="survey_1_5">
-							<span class="chk_circle2_txt" id="s_p_all_five">5</span>
+							<span class="chk_circle2_txt" id="s_p_all_five_q1">5</span>
 						</label>
 					</div>
 					<div class="example_degree">
-						<span id="s_p_all_not">전혀 만족스럽지 않다</span>
-						<span id="s_p_all_okay">매우 만족스럽다</span>
+						<span id="s_p_all_not_1">전혀 만족스럽지 않다</span>
+						<span id="s_p_all_okay_1">매우 만족스럽다</span>
 					</div>
 				</div>
 				<!-- question end -->
@@ -113,28 +113,28 @@
 					<div class="example chk_circle2_list">
 						<label for="survey_3_1" class="chk_circle2">
 							<input type="radio" name="survey_3" id="survey_3_1">
-							<span class="chk_circle2_txt" id="s_p_all_one" >1</span>
+							<span class="chk_circle2_txt" id="s_p_all_one_q3">1</span>
 						</label>
 						<label for="survey_3_2" class="chk_circle2">
 							<input type="radio" name="survey_3" id="survey_3_2">
-							<span class="chk_circle2_txt" id="s_p_all_two" >2</span>
+							<span class="chk_circle2_txt" id="s_p_all_two_q3">2</span>
 						</label>
 						<label for="survey_3_3" class="chk_circle2">
 							<input type="radio" name="survey_3" id="survey_3_3">
-							<span class="chk_circle2_txt"  id="s_p_all_three">3</span>
+							<span class="chk_circle2_txt"  id="s_p_all_three_q3">3</span>
 						</label>
 						<label for="survey_3_4" class="chk_circle2">
 							<input type="radio" name="survey_3" id="survey_3_4">
-							<span class="chk_circle2_txt"  id="s_p_all_four">4</span>
+							<span class="chk_circle2_txt"  id="s_p_all_four_q3">4</span>
 						</label>
 						<label for="survey_3_5" class="chk_circle2">
 							<input type="radio" name="survey_3" id="survey_3_5">
-							<span class="chk_circle2_txt"  id="s_p_all_five">5</span>
+							<span class="chk_circle2_txt"  id="s_p_all_five_q3">5</span>
 						</label>
 					</div>
 					<div class="example_degree">
-						<span id="s_p_all_not">전혀 그렇지 않다</span>
-						<span id="s_p_all_okay">매우 그렇다</span>
+						<span id="s_p_all_not_2">전혀 그렇지 않다</span>
+						<span id="s_p_all_okay_2">매우 그렇다</span>
 					</div>
 				</div>
 				<!-- question end -->
@@ -177,28 +177,28 @@
 					<div class="example chk_circle2_list">
 						<label for="survey_5_1" class="chk_circle2">
 							<input type="radio" name="survey_5" id="survey_5_1">
-							<span class="chk_circle2_txt" id="s_p_all_one">1</span>
+							<span class="chk_circle2_txt" id="s_p_all_one_q5">1</span>
 						</label>
 						<label for="survey_5_2" class="chk_circle2">
 							<input type="radio" name="survey_5" id="survey_5_2">
-							<span class="chk_circle2_txt" id="s_p_all_two">2</span>
+							<span class="chk_circle2_txt" id="s_p_all_two_q5">2</span>
 						</label>
 						<label for="survey_5_3" class="chk_circle2">
 							<input type="radio" name="survey_5" id="survey_5_3">
-							<span class="chk_circle2_txt" id="s_p_all_three">3</span>
+							<span class="chk_circle2_txt" id="s_p_all_three_q5">3</span>
 						</label>
 						<label for="survey_5_4" class="chk_circle2">
 							<input type="radio" name="survey_5" id="survey_5_4">
-							<span class="chk_circle2_txt" id="s_p_all_four">4</span>
+							<span class="chk_circle2_txt" id="s_p_all_four_q5">4</span>
 						</label>
 						<label for="survey_5_5" class="chk_circle2">
 							<input type="radio" name="survey_5" id="survey_5_5">
-							<span class="chk_circle2_txt" id="s_p_all_five">5</span>
+							<span class="chk_circle2_txt" id="s_p_all_five_q5">5</span>
 						</label>
 					</div>
 					<div class="example_degree">
-						<span id="s_p_all_not">전혀 그렇지 않다</span>
-						<span id="s_p_all_okay">매우 그렇다</span>
+						<span id="s_p_all_not_3">전혀 그렇지 않다</span>
+						<span id="s_p_all_okay_3">매우 그렇다</span>
 					</div>
 				</div>
 				<!-- question end -->
@@ -218,28 +218,28 @@
 					<div class="example chk_circle2_list">
 						<label for="survey_6_1" class="chk_circle2">
 							<input type="radio" name="survey_6" id="survey_6_1">
-							<span class="chk_circle2_txt" id="s_p_all_one">1</span>
+							<span class="chk_circle2_txt" id="s_p_all_one_q6">1</span>
 						</label>
 						<label for="survey_6_2" class="chk_circle2">
 							<input type="radio" name="survey_6" id="survey_6_2">
-							<span class="chk_circle2_txt" id="s_p_all_two">2</span>
+							<span class="chk_circle2_txt" id="s_p_all_two_q6">2</span>
 						</label>
 						<label for="survey_6_3" class="chk_circle2">
 							<input type="radio" name="survey_6" id="survey_6_3">
-							<span class="chk_circle2_txt" id="s_p_all_three">3</span>
+							<span class="chk_circle2_txt" id="s_p_all_three_q6">3</span>
 						</label>
 						<label for="survey_6_4" class="chk_circle2">
 							<input type="radio" name="survey_6" id="survey_6_4">
-							<span class="chk_circle2_txt" id="s_p_all_four">4</span>
+							<span class="chk_circle2_txt" id="s_p_all_four_q6">4</span>
 						</label>
 						<label for="survey_6_5" class="chk_circle2">
 							<input type="radio" name="survey_6" id="survey_6_5">
-							<span class="chk_circle2_txt" id="s_p_all_five">5</span>
+							<span class="chk_circle2_txt" id="s_p_all_five_q6">5</span>
 						</label>
 					</div>
 					<div class="example_degree">
-						<span id="s_p_all_not">전혀 그렇지 않다</span>
-						<span id="s_p_all_okay">매우 그렇다</span>
+						<span id="s_p_all_not_4">전혀 그렇지 않다</span>
+						<span id="s_p_all_okay_4">매우 그렇다</span>
 					</div>
 				</div>
 				<!-- question end -->
@@ -251,28 +251,28 @@
 					<div class="example chk_circle2_list">
 						<label for="survey_7_1" class="chk_circle2">
 							<input type="radio" name="survey_7" id="survey_7_1">
-							<span class="chk_circle2_txt" id="s_p_all_one">1</span>
+							<span class="chk_circle2_txt" id="s_p_all_one_q7">1</span>
 						</label>
 						<label for="survey_7_2" class="chk_circle2">
 							<input type="radio" name="survey_7" id="survey_7_2">
-							<span class="chk_circle2_txt" id="s_p_all_two">2</span>
+							<span class="chk_circle2_txt" id="s_p_all_two_q7">2</span>
 						</label>
 						<label for="survey_7_3" class="chk_circle2">
 							<input type="radio" name="survey_7" id="survey_7_3">
-							<span class="chk_circle2_txt" id="s_p_all_three">3</span>
+							<span class="chk_circle2_txt" id="s_p_all_three_q7">3</span>
 						</label>
 						<label for="survey_7_4" class="chk_circle2">
 							<input type="radio" name="survey_7" id="survey_7_4">
-							<span class="chk_circle2_txt" id="s_p_all_four">4</span>
+							<span class="chk_circle2_txt" id="s_p_all_four_q7">4</span>
 						</label>
 						<label for="survey_7_5" class="chk_circle2">
 							<input type="radio" name="survey_7" id="survey_7_5">
-							<span class="chk_circle2_txt" id="s_p_all_five">5</span>
+							<span class="chk_circle2_txt" id="s_p_all_five_q7">5</span>
 						</label>
 					</div>
 					<div class="example_degree">
-						<span id="s_p_all_not">전혀 그렇지 않다</span>
-						<span id="s_p_all_okay">매우 그렇다</span>
+						<span id="s_p_all_not_5">전혀 그렇지 않다</span>
+						<span id="s_p_all_okay_5">매우 그렇다</span>
 					</div>
 				</div>
 				<!-- question end -->
@@ -284,28 +284,28 @@
 					<div class="example chk_circle2_list">
 						<label for="survey_8_1" class="chk_circle2">
 							<input type="radio" name="survey_8" id="survey_8_1">
-							<span class="chk_circle2_txt" id="s_p_all_one">1</span>
+							<span class="chk_circle2_txt" id="s_p_all_one_q8">1</span>
 						</label>
 						<label for="survey_8_2" class="chk_circle2">
 							<input type="radio" name="survey_8" id="survey_8_2">
-							<span class="chk_circle2_txt" id="s_p_all_two">2</span>
+							<span class="chk_circle2_txt" id="s_p_all_two_q8">2</span>
 						</label>
 						<label for="survey_8_3" class="chk_circle2">
 							<input type="radio" name="survey_8" id="survey_8_3">
-							<span class="chk_circle2_txt" id="s_p_all_three">3</span>
+							<span class="chk_circle2_txt" id="s_p_all_three_q8">3</span>
 						</label>
 						<label for="survey_8_4" class="chk_circle2">
 							<input type="radio" name="survey_8" id="survey_8_4">
-							<span class="chk_circle2_txt" id="s_p_all_four">4</span>
+							<span class="chk_circle2_txt" id="s_p_all_four_q8">4</span>
 						</label>
 						<label for="survey_8_5" class="chk_circle2">
 							<input type="radio" name="survey_8" id="survey_8_5">
-							<span class="chk_circle2_txt" id="s_p_all_five">5</span>
+							<span class="chk_circle2_txt" id="s_p_all_five_q8">5</span>
 						</label>
 					</div>
 					<div class="example_degree">
-						<span id="s_p_all_not">전혀 그렇지 않다</span>
-						<span id="s_p_all_okay">매우 그렇다</span>
+						<span id="s_p_all_not_6">전혀 그렇지 않다</span>
+						<span id="s_p_all_okay_6">매우 그렇다</span>
 					</div>
 				</div>
 				<!-- question end -->
@@ -317,28 +317,28 @@
 					<div class="example chk_circle2_list">
 						<label for="survey_9_1" class="chk_circle2">
 							<input type="radio" name="survey_9" id="survey_9_1">
-							<span class="chk_circle2_txt" id="s_p_all_one">1</span>
+							<span class="chk_circle2_txt" id="s_p_all_one_q9">1</span>
 						</label>
 						<label for="survey_9_2" class="chk_circle2">
 							<input type="radio" name="survey_9" id="survey_9_2">
-							<span class="chk_circle2_txt" id="s_p_all_two">2</span>
+							<span class="chk_circle2_txt" id="s_p_all_two_q9">2</span>
 						</label>
 						<label for="survey_9_3" class="chk_circle2">
 							<input type="radio" name="survey_9" id="survey_9_3">
-							<span class="chk_circle2_txt" id="s_p_all_three">3</span>
+							<span class="chk_circle2_txt" id="s_p_all_three_q9">3</span>
 						</label>
 						<label for="survey_9_4" class="chk_circle2">
 							<input type="radio" name="survey_9" id="survey_9_4">
-							<span class="chk_circle2_txt" id="s_p_all_four">4</span>
+							<span class="chk_circle2_txt" id="s_p_all_four_q9">4</span>
 						</label>
 						<label for="survey_9_5" class="chk_circle2">
 							<input type="radio" name="survey_9" id="survey_9_5">
-							<span class="chk_circle2_txt" id="s_p_all_five">5</span>
+							<span class="chk_circle2_txt" id="s_p_all_five_q9">5</span>
 						</label>
 					</div>
 					<div class="example_degree">
-						<span id="s_p_all_not">전혀 그렇지 않다</span>
-						<span id="s_p_all_okay">매우 그렇다</span>
+						<span id="s_p_all_not_7">전혀 그렇지 않다</span>
+						<span id="s_p_all_okay_7">매우 그렇다</span>
 					</div>
 				</div>
 				<!-- question end -->
@@ -350,28 +350,28 @@
 					<div class="example chk_circle2_list">
 						<label for="survey_10_1" class="chk_circle2">
 							<input type="radio" name="survey_10" id="survey_10_1">
-							<span class="chk_circle2_txt" id="s_p_all_one">1</span>
+							<span class="chk_circle2_txt" id="s_p_all_one_q10">1</span>
 						</label>
 						<label for="survey_10_2" class="chk_circle2">
 							<input type="radio" name="survey_10" id="survey_10_2">
-							<span class="chk_circle2_txt" id="s_p_all_two">2</span>
+							<span class="chk_circle2_txt" id="s_p_all_two_q10">2</span>
 						</label>
 						<label for="survey_10_3" class="chk_circle2">
 							<input type="radio" name="survey_10" id="survey_10_3">
-							<span class="chk_circle2_txt" id="s_p_all_three">3</span>
+							<span class="chk_circle2_txt" id="s_p_all_three_q10">3</span>
 						</label>
 						<label for="survey_10_4" class="chk_circle2">
 							<input type="radio" name="survey_10" id="survey_10_4">
-							<span class="chk_circle2_txt" id="s_p_all_four">4</span>
+							<span class="chk_circle2_txt" id="s_p_all_four_q10">4</span>
 						</label>
 						<label for="survey_10_5" class="chk_circle2">
 							<input type="radio" name="survey_10" id="survey_10_5">
-							<span class="chk_circle2_txt" id="s_p_all_five">5</span>
+							<span class="chk_circle2_txt" id="s_p_all_five_q10">5</span>
 						</label>
 					</div>
 					<div class="example_degree">
-						<span id="s_p_all_not">전혀 그렇지 않다</span>
-						<span id="s_p_all_okay">매우 그렇다</span>
+						<span id="s_p_all_not_8">전혀 그렇지 않다</span>
+						<span id="s_p_all_okay_8">매우 그렇다</span>
 					</div>
 				</div>
 				<!-- question end -->
@@ -385,28 +385,28 @@
 					<div class="example chk_circle2_list">
 						<label for="survey_11_1" class="chk_circle2">
 							<input type="radio" name="survey_11" id="survey_11_1">
-							<span class="chk_circle2_txt" id="s_p_all_one">1</span>
+							<span class="chk_circle2_txt" id="s_p_all_one_q11">1</span>
 						</label>
 						<label for="survey_11_2" class="chk_circle2">
 							<input type="radio" name="survey_11" id="survey_11_2">
-							<span class="chk_circle2_txt" id="s_p_all_two">2</span>
+							<span class="chk_circle2_txt" id="s_p_all_two_q11">2</span>
 						</label>
 						<label for="survey_11_3" class="chk_circle2">
 							<input type="radio" name="survey_11" id="survey_11_3">
-							<span class="chk_circle2_txt" id="s_p_all_three">3</span>
+							<span class="chk_circle2_txt" id="s_p_all_three_q11">3</span>
 						</label>
 						<label for="survey_11_4" class="chk_circle2">
 							<input type="radio" name="survey_11" id="survey_11_4">
-							<span class="chk_circle2_txt" id="s_p_all_four">4</span>
+							<span class="chk_circle2_txt" id="s_p_all_four_q11">4</span>
 						</label>
 						<label for="survey_11_5" class="chk_circle2">
 							<input type="radio" name="survey_11" id="survey_11_5">
-							<span class="chk_circle2_txt" id="s_p_all_five">5</span>
+							<span class="chk_circle2_txt" id="s_p_all_five_q11">5</span>
 						</label>
 					</div>
 					<div class="example_degree">
-						<span id="s_p_all_not">전혀 그렇지 않다</span>
-						<span id="s_p_all_okay">매우 그렇다</span>
+						<span id="s_p_all_not_9">전혀 그렇지 않다</span>
+						<span id="s_p_all_okay_9">매우 그렇다</span>
 					</div>
 				</div>
 				<!-- question end -->
@@ -613,7 +613,7 @@
 					</div>
 					<!-- 히든박스 노출시  -->
 					<div class="q_hidden_textarea example" style="display: none;">
-						<textarea name="" id="survey_13_hidden" cols="30" rows="1" placeholder="내용을 작성해주세요(필수)"></textarea>
+						<textarea name="" id="survey_17_hidden" cols="30" rows="1" placeholder="내용을 작성해주세요(필수)"></textarea>
 					</div>
 				</div>
 				<!-- question end -->
