--- a/admin/01_dashboard/dashboard.html
+++ b/admin/01_dashboard/dashboard.html
@@ -24,59 +24,65 @@
 		<h1 class="adm_logo"><a href="../01_dashboard/dashboard.html"><img src="../image/logo_side.svg" alt="Another Saigon by LG"></a></h1>
 		<!-- adm_menulist -->
 		<ul class="adm_menulist">
-			<li><a href="../01_dashboard/dashboard.html" class="active menu_link01">대시보드</a></li>
-			<li><a href="../02_member/member_list.html" class="menu_link02">회원리스트</a></li>
+			<li><a href="../01_dashboard/dashboard.html" class="active menu_link01" id="ad_dash">대시보드</a></li>
+			<li><a href="../02_member/member_list.html" class="menu_link02" id="ad_people">회원리스트</a></li>
 			<li>
-				<a href="../03_mission/data.html" class="menu_link03">체험리스트</a>
+				<a href="../03_mission/data.html" class="menu_link03" id="ad_experience">체험리스트</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../03_mission/data.html" class="menu_link031">데이터</a></li>
-					<li><a href="../03_mission/mission01.html" class="menu_link032">스타일러 시향 체험</a></li>
-					<li><a href="../03_mission/mission02.html" class="menu_link033">My Objet Color</a></li>
-					<li><a href="../03_mission/mission03.html" class="menu_link034">오브제갤러리 제품 월드컵</a></li>
-					<li><a href="../03_mission/mission04.html" class="menu_link035">숨은 QR 찾기</a></li>
-					<li><a href="../03_mission/mission05.html" class="menu_link036">SNS 공유하기</a></li>
+					<li><a href="../03_mission/data.html" class="menu_link031" id="ad_data">데이터</a></li>
+					<li><a href="../03_mission/mission01.html" class="menu_link032" id="ad_mission01">스타일러 시향 체험</a></li>
+					<li><a href="../03_mission/mission02.html" class="menu_link033" id="ad_mission02">My Objet Color</a></li>
+					<li><a href="../03_mission/mission03.html" class="menu_link034" id="ad_mission03">오브제갤러리 제품 월드컵</a></li>
+					<li><a href="../03_mission/mission04.html" class="menu_link035" id="ad_mission04">숨은 QR 찾기</a></li>
+					<li><a href="../03_mission/mission05.html" class="menu_link036" id="ad_mission05">SNS 공유하기</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../04_survey/survey_data.html" class="menu_link04">서베이</a>
+				<a href="../04_survey/survey_data.html" class="menu_link04" id="ad_survey">서베이</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../04_survey/survey_data.html" class="menu_link041">데이터</a></li>
-					<li><a href="../04_survey/survey_table.html" class="menu_link042">테이블</a></li>
+					<li><a href="../04_survey/survey_data.html" class="menu_link041" id="ad_survey_data">데이터</a></li>
+					<li><a href="../04_survey/survey_table.html" class="menu_link042" id="ad_survey_table">테이블</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../05_event/event_list.html" class="menu_link05">이벤트</a>
+				<a href="../05_event/event_list.html" class="menu_link05" id="ad_event">이벤트</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../05_event/event_list.html" class="menu_link051">리스트</a></li>
-					<li><a href="../05_event/esg.html" class="menu_link052">ESG 서명하기</a></li>
-					<li><a href="../05_event/join.html" class="menu_link053">닷컴 회원가입</a></li>
+					<li><a href="../05_event/event_list.html" class="menu_link051" id="ad_event_list">리스트</a></li>
+					<li><a href="../05_event/esg.html" class="menu_link052" id="ad_event_esg">ESG 서명하기</a></li>
+					<li><a href="../05_event/join.html" class="menu_link053" id="ad_event_join">닷컴 회원가입</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../06_about/vietnam_about.html" class="menu_link06">공간 소개</a>
+				<a href="../06_about/vietnam_about.html" class="menu_link06" id="ad_about">공간 소개</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../06_about/vietnam_about.html" class="menu_link061">베트남어</a></li>
-					<li><a href="../06_about/english_about.html" class="menu_link062">영어</a></li>
+					<li><a href="../06_about/vietnam_about.html" class="menu_link061" id="ad_about_vet">베트남어</a></li>
+					<li><a href="../06_about/english_about.html" class="menu_link062" id="ad_about_en">영어</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../07_banner/vietnam_banner.html" class="menu_link07">미션 배너</a>
+				<a href="../07_banner/vietnam_banner.html" class="menu_link07" id="ad_banner">미션 배너</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../07_banner/vietnam_banner.html" class="menu_link071">베트남어</a></li>
-					<li><a href="../07_banner/english_banner.html" class="menu_link072">영어</a></li>
+					<li><a href="../07_banner/vietnam_banner.html" class="menu_link071" id="ad_banner_vet">베트남어</a></li>
+					<li><a href="../07_banner/english_banner.html" class="menu_link072" id="ad_banner_en">영어</a></li>
 				</ul>
 			</li>
-			<li><a href="../08_obs/obs_scan.html" class="menu_link08">OBS 스캔</a></li>
+			<li>
+				<a href="../08_obs/obs_scan.html" class="menu_link08" id="ad_qr">OBS 스캔</a>
+				<ul class="adm_menulist_sub">
+					<li><a href="../08_obs/obs_scan.html" class="menu_link081" id="ad_qr_obs">제품 QR(OBS)</a></li>
+					<li><a href="../08_obs/place_scan.html" class="menu_link082" id="ad_qr_place">공간 QR</a></li>
+				</ul>
+			</li>
 		</ul>
 		<!-- adm_menulist end -->
 		<div class="gnb_bottom">
 			<button id="menu_link_adm" onclick="location.href='../09_admpeople/admpeople_list.html'">관리자 관리</button>
 			<div class="dropdown_bottom dropdown">
-				<button class="dropbtn">한국어</button>
+				<button class="dropbtn" id="ad_lang">한국어</button>
 				<div class="drop_cont">
-					<a href="#">한국어</a>
-					<a href="#">ENGLISH</a>
-					<a href="#">Tiếng Việt</a>
+					<a href="#" id="ad_ko_ko">한국어</a>
+					<a href="#" id="ad_ko_en">ENGLISH</a>
+					<a href="#" id="ad_ko_ti">Tiếng Việt</a>
 				</div>
 			</div>
 		</div>
@@ -87,15 +93,14 @@
 		<section class="adm_top_section">
 			<div class="left">
 				<ul class="top_nav_list">
-					<li class="current_nav"><h2>대시보드</h2></li>
+					<li class="current_nav"><h2 id="ad_dash_nav">대시보드</h2></li>
 				</ul>
 			</div>
 			<div class="right">
 				<div class="dropdown_top dropdown">
-					<button class="dropbtn">어나더사이공</button>
+					<button class="dropbtn" id="ad_top_current">어나더사이공</button>
 					<div class="drop_cont">
-						<a href="#">어나더사이공</a>
-						<a href="#">화담숲</a>
+						<a href="#" id="ad_another">어나더사이공</a>
 					</div>
 				</div>
 			</div>
@@ -105,12 +110,12 @@
 			<!-- 대시보드 검색 -->
 			<div class="topsch_area">
 				<form action="" class="flex_row">
-					<h3 class="adm_top_title inblock">기간</h3>
+					<h3 class="adm_top_title inblock" id="dash_date">기간</h3>
 					<div class="date_sch_wrap">
 						<input type="text" name="" id="dash_date1" class="input_date" placeholder="날짜 선택">
 						<span class="date_during">~</span>
 						<input type="text" name="" id="dash_date2" class="input_date" placeholder="날짜 선택">
-						<button id="btn_dashsch" class="btn_date btn_s btn_black btn" disabled>검색</button>
+						<button id="btn_dashsch" class="btn_date btn_s btn_black btn" disabled id="dash_sch">검색</button>
 					</div>
 				</form>
 			</div>
@@ -119,14 +124,14 @@
 				<!-- today_total -->
 				<div class="today_total bg_w">
 					<div class="total_info">
-						<span class="today date">TODAY</span>
-						<span class="people">입구 QR 스캔 횟수</span>
+						<span class="today date" id="dash_tt_1">TODAY</span>
+						<span class="people" id="dash_tt_num_1">입구 QR 스캔 횟수</span>
 						<strong class="count">4,094</strong>
 					</div>
 					<span class="total_line"></span>
 					<div class="total_info">
-						<span class="all date">TOTAL</span>
-						<span class="people">입구 QR 스캔 횟수</span>
+						<span class="all date" id="dash_tt_2">TOTAL</span>
+						<span class="people" id="dash_tt_num_2">입구 QR 스캔 횟수</span>
 						<strong class="count">19,983</strong>
 					</div>
 				</div>
@@ -134,14 +139,14 @@
 				<!-- today_total -->
 				<div class="today_total bg_w">
 					<div class="total_info">
-						<span class="today date">TODAY</span>
-						<span class="people">공간 QR 스캔 횟수</span>
+						<span class="today date" id="dash_tt_3">TODAY</span>
+						<span class="people" id="dash_tt_num_3">공간 QR 스캔 횟수</span>
 						<strong class="count">3,567</strong>
 					</div>
 					<span class="total_line"></span>
 					<div class="total_info">
-						<span class="all date">TOTAL</span>
-						<span class="people">공간 QR 스캔 횟수</span>
+						<span class="all date" id="dash_tt_4">TOTAL</span>
+						<span class="people" id="dash_tt_num_4">공간 QR 스캔 횟수</span>
 						<strong class="count">20,445</strong>
 					</div>
 				</div>
@@ -149,14 +154,14 @@
 				<!-- today_total -->
 				<div class="today_total bg_w">
 					<div class="total_info">
-						<span class="today date">TODAY</span>
-						<span class="people">OBS QR 스캔 횟수</span>
+						<span class="today date" id="dash_tt_5">TODAY</span>
+						<span class="people" id="dash_tt_num_5">OBS QR 스캔 횟수</span>
 						<strong class="count">6,088</strong>
 					</div>
 					<span class="total_line"></span>
 					<div class="total_info">
-						<span class="all date">TOTAL</span>
-						<span class="people">OBS QR 스캔 횟수</span>
+						<span class="all date" id="dash_tt_6">TOTAL</span>
+						<span class="people" id="dash_tt_num_6">OBS QR 스캔 횟수</span>
 						<strong class="count">15,677</strong>
 					</div>
 				</div>
@@ -164,14 +169,14 @@
 				<!-- today_total -->
 				<div class="today_total bg_w">
 					<div class="total_info">
-						<span class="today date">TODAY</span>
-						<span class="people">리워드 인원</span>
+						<span class="today date" id="dash_tt_7">TODAY</span>
+						<span class="people" id="dash_tt_num_7">리워드 인원</span>
 						<strong class="count">6,088</strong>
 					</div>
 					<span class="total_line"></span>
 					<div class="total_info">
-						<span class="all date">TOTAL</span>
-						<span class="people">리워드 인원</span>
+						<span class="all date" id="dash_tt_8">TOTAL</span>
+						<span class="people" id="dash_tt_num_8">리워드 인원</span>
 						<strong class="count">15,677</strong>
 					</div>
 				</div>
@@ -179,14 +184,14 @@
 				<!-- today_total -->
 				<div class="today_total bg_w">
 					<div class="total_info">
-						<span class="today date">TODAY</span>
-						<span class="people">회원가입 인원</span>
+						<span class="today date" id="dash_tt_9">TODAY</span>
+						<span class="people" id="dash_tt_num_9">회원가입 인원</span>
 						<strong class="count">4,094</strong>
 					</div>
 					<span class="total_line"></span>
 					<div class="total_info">
-						<span class="all date">TOTAL</span>
-						<span class="people">회원가입 인원</span>
+						<span class="all date" id="dash_tt_10">TOTAL</span>
+						<span class="people" id="dash_tt_num_10">회원가입 인원</span>
 						<strong class="count">19,983</strong>
 					</div>
 				</div>
@@ -194,14 +199,14 @@
 				<!-- today_total -->
 				<div class="today_total bg_w">
 					<div class="total_info">
-						<span class="today date">TODAY</span>
-						<span class="people">로그인 인원</span>
+						<span class="today date" id="dash_tt_11">TODAY</span>
+						<span class="people" id="dash_tt_num_11">로그인 인원</span>
 						<strong class="count">3,567</strong>
 					</div>
 					<span class="total_line"></span>
 					<div class="total_info">
-						<span class="all date">TOTAL</span>
-						<span class="people">로그인 인원</span>
+						<span class="all date" id="dash_tt_12">TOTAL</span>
+						<span class="people" id="dash_tt_num_12">로그인 인원</span>
 						<strong class="count">20,445</strong>
 					</div>
 				</div>
@@ -209,14 +214,14 @@
 				<!-- today_total -->
 				<div class="today_total bg_w">
 					<div class="total_info">
-						<span class="today date">TODAY</span>
-						<span class="people">미션 참여 인원</span>
+						<span class="today date" id="dash_tt_13">TODAY</span>
+						<span class="people" id="dash_tt_num_13">미션 참여 인원</span>
 						<strong class="count">6,088</strong>
 					</div>
 					<span class="total_line"></span>
 					<div class="total_info">
-						<span class="all date">TOTAL</span>
-						<span class="people">미션 참여 인원</span>
+						<span class="all date" id="dash_tt_14">TOTAL</span>
+						<span class="people" id="dash_tt_num_14">미션 참여 인원</span>
 						<strong class="count">15,677</strong>
 					</div>
 				</div>
@@ -224,14 +229,14 @@
 				<!-- today_total -->
 				<div class="today_total bg_w">
 					<div class="total_info">
-						<span class="today date">TODAY</span>
-						<span class="people">미션 클리어 횟수</span>
+						<span class="today date" id="dash_tt_15">TODAY</span>
+						<span class="people" id="dash_tt_num_15">미션 클리어 횟수</span>
 						<strong class="count">6,088</strong>
 					</div>
 					<span class="total_line"></span>
 					<div class="total_info">
-						<span class="all date">TOTAL</span>
-						<span class="people">미션 클리어 횟수</span>
+						<span class="all date" id="dash_tt_16">TOTAL</span>
+						<span class="people" id="dash_tt_num_16">미션 클리어 횟수</span>
 						<strong class="count">15,677</strong>
 					</div>
 				</div>
@@ -239,7 +244,7 @@
 			</div>
 			<!-- dash_numboard end -->
 			<div class="dash_graph_wrap flex_row">
-				<h3 class="adm_top_title inblock">트렌드</h3>
+				<h3 class="adm_top_title inblock" id="dash_trend">트렌드</h3>
 				<div class="bg_w" style="width:calc(100% - 120px);">
 					<div class="canvas_wrap">
 						<canvas id="line-chart" style="width: 100%; height: 340px;" ></canvas>
@@ -250,7 +255,7 @@
 			<!-- dash_table_wrap : 대시보드 테이블 영역 -->
 			<div class="dash_table_wrap flex_row bg_w">
 				<div class="half">
-					<h3 class="bg_w_title">버튼 트래킹</h3>
+					<h3 class="bg_w_title" id="dash_traking">버튼 트래킹</h3>
 					<table class="adm_table">
 						<colgroup>
 							<col style="width:25%;" />
@@ -258,64 +263,64 @@
 							<col style="width:25%;" />
 						</colgroup>
 						<tr>
-							<th>No.</th>
-							<th>버튼</th>
-							<th>클릭</th>
+							<th id="dash_table1_no">No.</th>
+							<th id="dash_table1_btn">버튼</th>
+							<th id="dash_table1_click">클릭</th>
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>Space info > 페이스북</td>
+							<td id="dash_table1_1">Space info > 페이스북</td>
 							<td>000</td>
 						</tr>
 						<tr>
 							<td>2</td>
-							<td>Space info > 인스타그램</td>
+							<td id="dash_table1_2">Space info > 인스타그램</td>
 							<td>000</td>
 						</tr>
 						<tr>
 							<td>3</td>
-							<td>Space info > 유튜브</td>
+							<td id="dash_table1_3">Space info > 유튜브</td>
 							<td>000</td>
 						</tr>
 						<tr>
 							<td>4</td>
-							<td>Space info > 틱톡</td>
+							<td id="dash_table1_4">Space info > 틱톡</td>
 							<td>000</td>
 						</tr>
 						<tr>
 							<td>5</td>
-							<td>Space info > THE COFFEE HOUSE</td>
+							<td id="dash_table1_5">Space info > THE COFFEE HOUSE</td>
 							<td>000</td>
 						</tr>
 						<tr>
 							<td>6</td>
-							<td>Space info > DONG DONG</td>
+							<td id="dash_table1_6">Space info > DONG DONG</td>
 							<td>000</td>
 						</tr>
 						<tr>
 							<td>7</td>
-							<td>Space info > UNG GAMES</td>
+							<td id="dash_table1_7">Space info > UNG GAMES</td>
 							<td>000</td>
 						</tr>
 						<tr>
 							<td>8</td>
-							<td>Space info > LG 홈페이지</td>
+							<td id="dash_table1_8">Space info > LG 홈페이지</td>
 							<td>000</td>
 						</tr>
 						<tr>
 							<td>9</td>
-							<td>Misson >  LG 홈페이지 배너</td>
+							<td id="dash_table1_9">Misson >  LG 홈페이지 배너</td>
 							<td>000</td>
 						</tr>
 						<tr>
 							<td>10</td>
-							<td>Misson > 페이스북 이벤트 배너</td>
+							<td id="dash_table1_10">Misson > 페이스북 이벤트 배너</td>
 							<td>000</td>
 						</tr>
 					</table>
 				</div>
 				<div class="half">
-					<h3 class="bg_w_title">관심사 선택</h3>
+					<h3 class="bg_w_title" id="dash_table_type">관심사 선택</h3>
 					<table class="adm_table">
 						<colgroup>
 							<col style="width:25%;" />
@@ -323,33 +328,33 @@
 							<col style="width:25%;" />
 						</colgroup>
 						<tr>
-							<th>No.</th>
-							<th>관심사 선택</th>
-							<th>횟수</th>
+							<th id="dash_table2_no">No.</th>
+							<th id="dash_table2_type">관심사 선택</th>
+							<th id="dash_table2_number">횟수</th>
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>GF</td>
+							<td id="dash_table2_11">GF</td>
 							<td>000</td>
 						</tr>
 						<tr>
 							<td>2</td>
-							<td>1F</td>
+							<td id="dash_table2_12">1F</td>
 							<td>000</td>
 						</tr>
 						<tr>
 							<td>3</td>
-							<td>3F</td>
+							<td id="dash_table2_13">3F</td>
 							<td>000</td>
 						</tr>
 						<tr>
 							<td>4</td>
-							<td>5F</td>
+							<td id="dash_table2_14">5F</td>
 							<td>000</td>
 						</tr>
 					</table>
 					<!-- 미션 클리어 table 영역 -->
-					<h3 class="bg_w_title">미션 클리어</h3>
+					<h3 class="bg_w_title" id="dash_table_mission">미션 클리어</h3>
 					<table class="adm_table">
 						<colgroup>
 							<col style="width:25%;" />
@@ -358,32 +363,32 @@
 						</colgroup>
 						<tr>
 							<th>No.</th>
-							<th>미션</th>
-							<th>클리어</th>
+							<th id="dash_table3_mi">미션</th>
+							<th id="dash_table3_clear">클리어</th>
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>스타일러 시향 체험</td>
+							<td id="dash_table3_m01">스타일러 시향 체험</td>
 							<td>000</td>
 						</tr>
 						<tr>
 							<td>2</td>
-							<td>My Objet Color</td>
+							<td id="dash_table3_m02">My Objet Color</td>
 							<td>000</td>
 						</tr>
 						<tr>
 							<td>3</td>
-							<td>오브제갤러리 제품 월드컵</td>
+							<td id="dash_table3_m03">오브제갤러리 제품 월드컵</td>
 							<td>000</td>
 						</tr>
 						<tr>
 							<td>4</td>
-							<td>숨은 QR 찾기</td>
+							<td id="dash_table3_m04">숨은 QR 찾기</td>
 							<td>000</td>
 						</tr>
 						<tr>
 							<td>5</td>
-							<td>SNS 공유하기</td>
+							<td id="dash_table3_m05">SNS 공유하기</td>
 							<td>000</td>
 						</tr>
 					</table>
@@ -443,6 +448,28 @@
 		
 		
 	});
-	document.getElementById('js-legend').innerHTML = lineChart.generateLegend();
+	// 커스텀 레전드 생성
+	function generateCustomLegend(chart) {
+		const datasets = chart.data.datasets;
+		let html = '<ul class="custom-legend">';
+
+		datasets.forEach((dataset, index) => {
+			html += `<li id="legend-${index}" onclick="legendClickHandler(event, '${index}')">`;
+			html += `<span style="background-color:${dataset.borderColor}"></span>`;
+			html += dataset.label;
+			html += '</li>';
+		});
+
+		html += '</ul>';
+		return html;
+	}
+
+	// 레전드 클릭 이벤트 핸들러
+	function legendClickHandler(evt, datasetIndex) {
+		// 여기에 클릭 이벤트에 대한 처리 로직 작성
+	}
+
+	// 커스텀 레전드를 페이지에 적용
+	document.getElementById('js-legend').innerHTML = generateCustomLegend(lineChart);
 </script>
 </html>
