--- a/admin/05_event/event_list.html
+++ b/admin/05_event/event_list.html
@@ -20,59 +20,65 @@
 		<h1 class="adm_logo"><a href="../01_dashboard/dashboard.html"><img src="../image/logo_side.svg" alt="Another Saigon by LG"></a></h1>
 		<!-- adm_menulist -->
 		<ul class="adm_menulist">
-			<li><a href="../01_dashboard/dashboard.html" class="menu_link01">대시보드</a></li>
-			<li><a href="../02_member/member_list.html" class="menu_link02">회원리스트</a></li>
+			<li><a href="../01_dashboard/dashboard.html" class="menu_link01" id="ad_dash">대시보드</a></li>
+			<li><a href="../02_member/member_list.html" class="menu_link02" id="ad_people">회원리스트</a></li>
 			<li>
-				<a href="../03_mission/data.html" class="menu_link03">체험리스트</a>
+				<a href="../03_mission/data.html" class="menu_link03" id="ad_experience">체험리스트</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../03_mission/data.html" class="menu_link031">데이터</a></li>
-					<li><a href="../03_mission/mission01.html" class="menu_link032">스타일러 시향 체험</a></li>
-					<li><a href="../03_mission/mission02.html" class="menu_link033">My Objet Color</a></li>
-					<li><a href="../03_mission/mission03.html" class="menu_link034">오브제갤러리 제품 월드컵</a></li>
-					<li><a href="../03_mission/mission04.html" class="menu_link035">숨은 QR 찾기</a></li>
-					<li><a href="../03_mission/mission05.html" class="menu_link036">SNS 공유하기</a></li>
+					<li><a href="../03_mission/data.html" class="menu_link031" id="ad_data">데이터</a></li>
+					<li><a href="../03_mission/mission01.html" class="menu_link032" id="ad_mission01">스타일러 시향 체험</a></li>
+					<li><a href="../03_mission/mission02.html" class="menu_link033" id="ad_mission02">My Objet Color</a></li>
+					<li><a href="../03_mission/mission03.html" class="menu_link034" id="ad_mission03">오브제갤러리 제품 월드컵</a></li>
+					<li><a href="../03_mission/mission04.html" class="menu_link035" id="ad_mission04">숨은 QR 찾기</a></li>
+					<li><a href="../03_mission/mission05.html" class="menu_link035" id="ad_mission05">SNS 공유하기</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../04_survey/survey_data.html" class="menu_link04">서베이</a>
+				<a href="../04_survey/survey_data.html" class="menu_link04" id="ad_survey">서베이</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../04_survey/survey_data.html" class="menu_link041">데이터</a></li>
-					<li><a href="../04_survey/survey_table.html" class="menu_link042">테이블</a></li>
+					<li><a href="../04_survey/survey_data.html" class="menu_link041" id="ad_survey_data">데이터</a></li>
+					<li><a href="../04_survey/survey_table.html" class="menu_link042" id="ad_survey_table">테이블</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../05_event/event_list.html" class="active menu_link05">이벤트</a>
+				<a href="../05_event/event_list.html" class="active menu_link05" id="ad_event">이벤트</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../05_event/event_list.html" class="active menu_link051">리스트</a></li>
-					<li><a href="../05_event/esg.html" class="menu_link052">ESG 서명하기</a></li>
-					<li><a href="../05_event/join.html" class="menu_link053">닷컴 회원가입</a></li>
+					<li><a href="../05_event/event_list.html" class="active menu_link051" id="ad_event_list">리스트</a></li>
+					<li><a href="../05_event/esg.html" class="menu_link052" id="ad_event_esg">ESG 서명하기</a></li>
+					<li><a href="../05_event/join.html" class="menu_link053" id="ad_event_join">닷컴 회원가입</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../06_about/vietnam_about.html" class="menu_link06">공간 소개</a>
+				<a href="../06_about/vietnam_about.html" class="menu_link06" id="ad_about">공간 소개</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../06_about/vietnam_about.html" class="menu_link061">베트남어</a></li>
-					<li><a href="../06_about/english_about.html" class="menu_link062">영어</a></li>
+					<li><a href="../06_about/vietnam_about.html" class="menu_link061" id="ad_about_vet">베트남어</a></li>
+					<li><a href="../06_about/english_about.html" class="menu_link062" id="ad_about_en">영어</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../07_banner/vietnam_banner.html" class="menu_link07">미션 배너</a>
+				<a href="../07_banner/vietnam_banner.html" class="menu_link07" id="ad_banner">미션 배너</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../07_banner/vietnam_banner.html" class="menu_link071">베트남어</a></li>
-					<li><a href="../07_banner/english_banner.html" class="menu_link072">영어</a></li>
+					<li><a href="../07_banner/vietnam_banner.html" class="menu_link071" id="ad_banner_vet">베트남어</a></li>
+					<li><a href="../07_banner/english_banner.html" class="menu_link072" id="ad_banner_en">영어</a></li>
 				</ul>
 			</li>
-			<li><a href="../08_obs/obs_scan.html" class="menu_link08">OBS 스캔</a></li>
+			<li>
+				<a href="../08_obs/obs_scan.html" class="menu_link08" id="ad_qr">OBS 스캔</a>
+				<ul class="adm_menulist_sub">
+					<li><a href="../08_obs/obs_scan.html" class="menu_link081" id="ad_qr_obs">제품 QR(OBS)</a></li>
+					<li><a href="../08_obs/place_scan.html" class="menu_link082" id="ad_qr_place">공간 QR</a></li>
+				</ul>
+			</li>
 		</ul>
 		<!-- adm_menulist end -->
 		<div class="gnb_bottom">
 			<button id="menu_link_adm" onclick="location.href='../09_admpeople/admpeople_list.html'">관리자 관리</button>
 			<div class="dropdown_bottom dropdown">
-				<button class="dropbtn">한국어</button>
+				<button class="dropbtn" id="ad_lang">한국어</button>
 				<div class="drop_cont">
-					<a href="#">한국어</a>
-					<a href="#">ENGLISH</a>
-					<a href="#">Tiếng Việt</a>
+					<a href="#" id="ad_ko_ko">한국어</a>
+					<a href="#" id="ad_ko_en">ENGLISH</a>
+					<a href="#" id="ad_ko_ti">Tiếng Việt</a>
 				</div>
 			</div>
 		</div>
@@ -83,16 +89,15 @@
 		<section class="adm_top_section">
 			<div class="left">
 				<ul class="top_nav_list">
-					<li class="prev_nav">이벤트</li>
-					<li class="current_nav"><h2>리스트</h2></li>
+					<li class="prev_nav" id="ad_event01_nav">이벤트</li>
+					<li class="current_nav"><h2 id="ad_event_list01_nav">리스트</h2></li>
 				</ul>
 			</div>
 			<div class="right">
 				<div class="dropdown_top dropdown">
-					<button class="dropbtn">어나더사이공</button>
+					<button class="dropbtn" id="ad_top_current">어나더사이공</button>
 					<div class="drop_cont">
-						<a href="#">어나더사이공</a>
-						<a href="#">화담숲</a>
+						<a href="#" id="ad_another">어나더사이공</a>
 					</div>
 				</div>
 			</div>
@@ -102,9 +107,9 @@
 			<div class="no_sch adm_table_wrap flex_column bg_w">
 				<div class="adm_table_top">
 					<div class="left">
-						<p class="table_total inblock">전체 : 5건</p>
-						<p class="table_total inblock">진행중 : 3건</p>
-						<p class="table_total inblock">종료 : 2건</p>
+						<p class="table_total inblock" id="event_table_all">전체 : 5건</p>
+						<p class="table_total inblock" id="event_table_ing">진행중 : 3건</p>
+						<p class="table_total inblock" id="event_table_end">종료 : 2건</p>
 					</div>
 					<div class="right">
 						<button onclick="location.href='./event_write.html'" id="goto_event_write" class="btn_m btn_primary btn">생성하기</button>
@@ -121,42 +126,42 @@
 							<col style="width: 20%; min-width: 240px;" />
 						</colgroup>
 						<tr>
-							<th>No.</th>
-							<th>이벤트 기간</th>
-							<th>이벤트 형식</th>
-							<th>제목(베트남어)</th>
-							<th>비고</th>
+							<th id="event_table_no">No.</th>
+							<th id="event_table_date">이벤트 기간</th>
+							<th id="event_table_type">이벤트 형식</th>
+							<th id="event_table_title">제목(베트남어)</th>
+							<th id="event_table_note">비고</th>
 						</tr>
 						<tr>
 							<td>5</td><td>2023-10-24 ~ 2023-12-31</td><td>이미지</td><td><a href="./event_view.html">오픈 기념 이벤트</a></td>
 							<td class="td_btns">
-								<button onclick="location.href='./event_modify.html'" class="btn_xs btn_black btn">수정</button>
-								<button onclick="location.href='./event_delete.html'" class="btn_xs btn_darkgray btn">삭제</button>
+								<button onclick="location.href='./event_modify.html'" class="btn_xs btn_black btn" id="event_goto_modify1">수정</button>
+								<button onclick="location.href='./event_delete.html'" class="btn_xs btn_darkgray btn" id="event_goto_delete1">삭제</button>
 							</td>
 						</tr>
 						<tr>
 							<td>4</td><td>2023-10-24 ~ 2023-12-31</td><td>이미지 + 링크</td><td><a href="./event_view.html">인증샷 이벤트</a></td>
 							<td class="td_btns">
-								<button onclick="location.href='./event_modify.html'" class="btn_xs btn_black btn">수정</button>
-								<button onclick="location.href='./event_delete.html'" class="btn_xs btn_darkgray btn">삭제</button>
+								<button onclick="location.href='./event_modify.html'" class="btn_xs btn_black btn" id="event_goto_modify2">수정</button>
+								<button onclick="location.href='./event_delete.html'" class="btn_xs btn_darkgray btn" id="event_goto_delete2">삭제</button>
 							</td>
 						</tr>
 						<tr>
 							<td>3</td><td>...</td><td>이미지 + 링크</td><td><a href="./event_view.html">닷컴 회원 가입 이벤트</a></td>
 							<td class="td_btns">
-								<button onclick="location.href='./event_modify.html'" class="btn_xs btn_black btn">수정</button>
+								<button onclick="location.href='./event_modify.html'" class="btn_xs btn_black btn" id="event_goto_modify3">수정</button>
 							</td>
 						</tr>
 						<tr>
 							<td>2</td><td>...</td><td>이미지</td><td><a href="./event_view.html">ESG 참여 서명하기 이벤트</a></td>
 							<td class="td_btns">
-								<button onclick="location.href='./event_modify.html'" class="btn_xs btn_black btn">수정</button>
+								<button onclick="location.href='./event_modify.html'" class="btn_xs btn_black btn" id="event_goto_modify4">수정</button>
 							</td>
 						</tr>
 						<tr>
 							<td>1</td><td>...</td><td>...</td><td>...</td>
 							<td class="td_btns">
-								<button onclick="location.href='./event_modify.html'" class="btn_xs btn_black btn">수정</button>
+								<button onclick="location.href='./event_modify.html'" class="btn_xs btn_black btn" id="event_goto_modify5">수정</button>
 							</td>
 						</tr>
 					</table>
