--- a/04_event/password_ok.html
+++ b/04_event/password_ok.html
@@ -49,7 +49,8 @@
 		<div id="m05_scan_clear" class="popup_wrap blur_pop" style="display: flex;">
 			<div class="blur_bg active"></div>
 			<div class="pop_content">
-				<h2 id="e_p_reward">리워드 증정이 확인되었습니다.</h2>
+				<!-- 2023-11-28 -->
+				<h2 id="e_p_reward">처리가 완료되었습니다.</h2>
 				<div class="pop_bottom_btns">
 					<button onclick="location.href='./view_02.html'" id="btn_event_close" class="ok_circle btn_pop_circle">닫기</button>
 				</div>
