--- a/admin/04_survey/survey_data.html
+++ b/admin/04_survey/survey_data.html
@@ -20,59 +20,65 @@
 		<h1 class="adm_logo"><a href="../01_dashboard/dashboard.html"><img src="../image/logo_side.svg" alt="Another Saigon by LG"></a></h1>
 		<!-- adm_menulist -->
 		<ul class="adm_menulist">
-			<li><a href="../01_dashboard/dashboard.html" class="active menu_link01">대시보드</a></li>
-			<li><a href="../02_member/member_list.html" class="menu_link02">회원리스트</a></li>
+			<li><a href="../01_dashboard/dashboard.html" class="active menu_link01" id="ad_dash">대시보드</a></li>
+			<li><a href="../02_member/member_list.html" class="menu_link02" id="ad_people">회원리스트</a></li>
 			<li>
-				<a href="../03_mission/data.html" class="menu_link03">체험리스트</a>
+				<a href="../03_mission/data.html" class="menu_link03" id="ad_experience">체험리스트</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../03_mission/data.html" class="menu_link031">데이터</a></li>
-					<li><a href="../03_mission/mission01.html" class="menu_link032">스타일러 시향 체험</a></li>
-					<li><a href="../03_mission/mission02.html" class="menu_link033">My Objet Color</a></li>
-					<li><a href="../03_mission/mission03.html" class="menu_link034">오브제갤러리 제품 월드컵</a></li>
-					<li><a href="../03_mission/mission04.html" class="menu_link035">숨은 QR 찾기</a></li>
-					<li><a href="../03_mission/mission05.html" class="menu_link036">SNS 공유하기</a></li>
+					<li><a href="../03_mission/data.html" class="menu_link031" id="ad_data">데이터</a></li>
+					<li><a href="../03_mission/mission01.html" class="menu_link032" id="ad_mission01">스타일러 시향 체험</a></li>
+					<li><a href="../03_mission/mission02.html" class="menu_link033" id="ad_mission02">My Objet Color</a></li>
+					<li><a href="../03_mission/mission03.html" class="menu_link034" id="ad_mission03">오브제갤러리 제품 월드컵</a></li>
+					<li><a href="../03_mission/mission04.html" class="menu_link035" id="ad_mission04">숨은 QR 찾기</a></li>
+					<li><a href="../03_mission/mission05.html" class="menu_link035" id="ad_mission05">SNS 공유하기</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../04_survey/survey_data.html" class="active menu_link04">서베이</a>
+				<a href="../04_survey/survey_data.html" class="active menu_link04" id="ad_survey">서베이</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../04_survey/survey_data.html" class="active menu_link041">데이터</a></li>
-					<li><a href="../04_survey/survey_table.html" class="menu_link042">테이블</a></li>
+					<li><a href="../04_survey/survey_data.html" class="active menu_link041" id="ad_survey_data">데이터</a></li>
+					<li><a href="../04_survey/survey_table.html" class="menu_link042" id="ad_survey_table">테이블</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../05_event/event_list.html" class="menu_link05">이벤트</a>
+				<a href="../05_event/event_list.html" class="menu_link05" id="ad_event">이벤트</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../05_event/event_list.html" class="menu_link051">리스트</a></li>
-					<li><a href="../05_event/esg.html" class="menu_link052">ESG 서명하기</a></li>
-					<li><a href="../05_event/join.html" class="menu_link053">닷컴 회원가입</a></li>
+					<li><a href="../05_event/event_list.html" class="menu_link051" id="ad_event_list">리스트</a></li>
+					<li><a href="../05_event/esg.html" class="menu_link052" id="ad_event_esg">ESG 서명하기</a></li>
+					<li><a href="../05_event/join.html" class="menu_link053" id="ad_event_join">닷컴 회원가입</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../06_about/vietnam_about.html" class="menu_link06">공간 소개</a>
+				<a href="../06_about/vietnam_about.html" class="menu_link06" id="ad_about">공간 소개</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../06_about/vietnam_about.html" class="menu_link061">베트남어</a></li>
-					<li><a href="../06_about/english_about.html" class="menu_link062">영어</a></li>
+					<li><a href="../06_about/vietnam_about.html" class="menu_link061" id="ad_about_vet">베트남어</a></li>
+					<li><a href="../06_about/english_about.html" class="menu_link062" id="ad_about_en">영어</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../07_banner/vietnam_banner.html" class="menu_link07">미션 배너</a>
+				<a href="../07_banner/vietnam_banner.html" class="menu_link07" id="ad_banner">미션 배너</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../07_banner/vietnam_banner.html" class="menu_link071">베트남어</a></li>
-					<li><a href="../07_banner/english_banner.html" class="menu_link072">영어</a></li>
+					<li><a href="../07_banner/vietnam_banner.html" class="menu_link071" id="ad_banner_vet">베트남어</a></li>
+					<li><a href="../07_banner/english_banner.html" class="menu_link072" id="ad_banner_en">영어</a></li>
 				</ul>
 			</li>
-			<li><a href="../08_obs/obs_scan.html" class="menu_link08">OBS 스캔</a></li>
+			<li>
+				<a href="../08_obs/obs_scan.html" class="menu_link08" id="ad_qr">OBS 스캔</a>
+				<ul class="adm_menulist_sub">
+					<li><a href="../08_obs/obs_scan.html" class="menu_link081" id="ad_qr_obs">제품 QR(OBS)</a></li>
+					<li><a href="../08_obs/place_scan.html" class="menu_link082" id="ad_qr_place">공간 QR</a></li>
+				</ul>
+			</li>
 		</ul>
 		<!-- adm_menulist end -->
 		<div class="gnb_bottom">
 			<button id="menu_link_adm" onclick="location.href='../09_admpeople/admpeople_list.html'">관리자 관리</button>
 			<div class="dropdown_bottom dropdown">
-				<button class="dropbtn">한국어</button>
+				<button class="dropbtn" id="ad_lang">한국어</button>
 				<div class="drop_cont">
-					<a href="#">한국어</a>
-					<a href="#">ENGLISH</a>
-					<a href="#">Tiếng Việt</a>
+					<a href="#" id="ad_ko_ko">한국어</a>
+					<a href="#" id="ad_ko_en">ENGLISH</a>
+					<a href="#" id="ad_ko_ti">Tiếng Việt</a>
 				</div>
 			</div>
 		</div>
@@ -83,16 +89,15 @@
 		<section class="adm_top_section">
 			<div class="left">
 				<ul class="top_nav_list">
-					<li class="prev_nav">서베이</li>
-					<li class="current_nav"><h2>데이터</h2></li>
+					<li class="prev_nav" id="ad_survey01_nav">서베이</li>
+					<li class="current_nav"><h2 id="ad_survey_data_nav">데이터</h2></li>
 				</ul>
 			</div>
 			<div class="right">
 				<div class="dropdown_top dropdown">
-					<button class="dropbtn">어나더사이공</button>
+					<button class="dropbtn" id="ad_top_current">어나더사이공</button>
 					<div class="drop_cont">
-						<a href="#">어나더사이공</a>
-						<a href="#">화담숲</a>
+						<a href="#" id="ad_another">어나더사이공</a>
 					</div>
 				</div>
 			</div>
@@ -103,7 +108,7 @@
 			<div class="topsch_area">
 				<form action="" class="flex_column">
 					<div class="date_row flex_row">
-						<h3 class="adm_top_title inblock">기간</h3>
+						<h3 class="adm_top_title inblock" id="survey_date">기간</h3>
 						<div class="date_sch_wrap">
 							<input type="text" name="date_input_8" id="date_input_8_1" class="input_date" placeholder="날짜 선택">
 							<span class="date_during">~</span>
@@ -111,107 +116,107 @@
 						</div>
 					</div>
 					<div class="age_row flex_row">
-						<h3 class="adm_top_title inblock">연령</h3>
+						<h3 class="adm_top_title inblock" id="survey_age">연령</h3>
 						<div class="chk_wrap flex_column bg_w">
 							<div class="flex_row">
 								<label for="age_chk_7_1" class="chk">
 									<input type="radio" name="age_chk_7" id="age_chk_7_1" checked="checked">
 									<span class="chkmark"></span>
-									<span class="chkText">전체</span>
+									<span class="chkText" id="survey_age_1">전체</span>
 								</label>
 								<label for="age_chk_7_2" class="chk">
 									<input type="radio" name="age_chk_7" id="age_chk_7_2">
 									<span class="chkmark"></span>
-									<span class="chkText">언급하기 싫음</span>
+									<span class="chkText" id="survey_age_2">언급하기 싫음</span>
 								</label>
 							</div>
 							<div class="flex_row">
 								<label for="age_chk_7_3" class="chk">
 									<input type="radio" name="age_chk_7" id="age_chk_7_3">
 									<span class="chkmark"></span>
-									<span class="chkText">10세 미만</span>
+									<span class="chkText" id="survey_age_3">10세 미만</span>
 								</label>
 								<label for="age_chk_7_4" class="chk">
 									<input type="radio" name="age_chk_7" id="age_chk_7_4">
 									<span class="chkmark"></span>
-									<span class="chkText">10~14</span>
+									<span class="chkText" id="survey_age_4">10~14</span>
 								</label>
 								<label for="age_chk_7_5" class="chk">
 									<input type="radio" name="age_chk_7" id="age_chk_7_5">
 									<span class="chkmark"></span>
-									<span class="chkText">15~19</span>
+									<span class="chkText" id="survey_age_5">15~19</span>
 								</label>
 								<label for="age_chk_7_6" class="chk">
 									<input type="radio" name="age_chk_7" id="age_chk_7_6">
 									<span class="chkmark"></span>
-									<span class="chkText">20~24</span>
+									<span class="chkText" id="survey_age_6">20~24</span>
 								</label>
 								<label for="age_chk_7_7" class="chk">
 									<input type="radio" name="age_chk_7" id="age_chk_7_7">
 									<span class="chkmark"></span>
-									<span class="chkText">25~29</span>
+									<span class="chkText" id="survey_age_7">25~29</span>
 								</label>
 								<label for="age_chk_7_8" class="chk">
 									<input type="radio" name="age_chk_7" id="age_chk_7_8">
 									<span class="chkmark"></span>
-									<span class="chkText">30~34</span>
+									<span class="chkText" id="survey_age_8">30~34</span>
 								</label>
 								<label for="age_chk_7_9" class="chk">
 									<input type="radio" name="age_chk_7" id="age_chk_7_9">
 									<span class="chkmark"></span>
-									<span class="chkText">35~39</span>
+									<span class="chkText" id="survey_age_9">35~39</span>
 								</label>
 								<label for="age_chk_7_10" class="chk">
 									<input type="radio" name="age_chk_7" id="age_chk_7_10">
 									<span class="chkmark"></span>
-									<span class="chkText">40~44</span>
+									<span class="chkText" id="survey_age_10">40~44</span>
 								</label>
 								<label for="age_chk_7_11" class="chk">
 									<input type="radio" name="age_chk_7" id="age_chk_7_11">
 									<span class="chkmark"></span>
-									<span class="chkText">45~49</span>
+									<span class="chkText" id="survey_age_11">45~49</span>
 								</label>
 								<label for="age_chk_7_12" class="chk">
 									<input type="radio" name="age_chk_7" id="age_chk_7_12">
 									<span class="chkmark"></span>
-									<span class="chkText">50세 이상</span>
+									<span class="chkText" id="survey_age_12">50세 이상</span>
 								</label>
 							</div>
 							
 						</div>
 					</div>
 					<div class="gender_row flex_row">
-						<h3 class="adm_top_title inblock">성별</h3>
+						<h3 class="adm_top_title inblock" id="survey_gender">성별</h3>
 						<div class="chk_wrap bg_w">
 							<label for="gender_chk_7_1" class="chk">
 								<input type="radio" name="gender_chk_7" id="gender_chk_7_1" checked="checked">
 								<span class="chkmark"></span>
-								<span class="chkText">전체</span>
+								<span class="chkText" id="survey_gender_1">전체</span>
 							</label>
 							<label for="gender_chk_7_2" class="chk">
 								<input type="radio" name="gender_chk_7" id="gender_chk_7_2">
 								<span class="chkmark"></span>
-								<span class="chkText">언급하기 싫음</span>
+								<span class="chkText" id="survey_gender_2">언급하기 싫음</span>
 							</label>
 							<label for="gender_chk_7_3" class="chk">
 								<input type="radio" name="gender_chk_7" id="gender_chk_7_3">
 								<span class="chkmark"></span>
-								<span class="chkText">남자</span>
+								<span class="chkText" id="survey_gender_3">남자</span>
 							</label>
 							<label for="gender_chk_7_4" class="chk">
 								<input type="radio" name="gender_chk_7" id="gender_chk_7_4">
 								<span class="chkmark"></span>
-								<span class="chkText">여자</span>
+								<span class="chkText" id="survey_gender_4">여자</span>
 							</label>
 						</div>
 					</div>
 					<div class="mission_row flex_row">
-						<h3 class="adm_top_title inblock">기능</h3>
+						<h3 class="adm_top_title inblock" id="survey_skill">기능</h3>
 						<div class="chk_wrap bg_w">
 							<label for="duplicate_chk_1" class="chk">
 								<input type="checkbox" name="duplicate_chk" id="duplicate_chk_1">
 								<span class="chkmark"></span>
-								<span class="chkText">중복 설문 제외(가장 마지막 설문 포함)</span>
+								<span class="chkText" id="survey_skill_1">중복 설문 제외(가장 마지막 설문 포함)</span>
 							</label>
 						</div>
 						<button id="sch_survey_data" class="ml15 btn_topsch btn_black btn">검색</button>
@@ -221,7 +226,7 @@
 			<!-- topsch_area end -->
 			<div class="adm_table_wrap flex_column bg_w">
 				<div class="adm_table_top">
-					<p class="left table_total">전체 : 99건</p>
+					<p class="left table_total" id="survey_table_all">전체 : 99건</p>
 					<div class="right">
 						<button id="down_survey_data" class="btn_m btn_primary btn">다운로드</button>
 					</div>
