--- a/admin/05_event/event_view.html
+++ b/admin/05_event/event_view.html
@@ -20,59 +20,65 @@
 		<h1 class="adm_logo"><a href="../01_dashboard/dashboard.html"><img src="../image/logo_side.svg" alt="Another Saigon by LG"></a></h1>
 		<!-- adm_menulist -->
 		<ul class="adm_menulist">
-			<li><a href="../01_dashboard/dashboard.html" class="menu_link01">대시보드</a></li>
-			<li><a href="../02_member/member_list.html" class="menu_link02">회원리스트</a></li>
+			<li><a href="../01_dashboard/dashboard.html" class="menu_link01" id="ad_dash">대시보드</a></li>
+			<li><a href="../02_member/member_list.html" class="menu_link02" id="ad_people">회원리스트</a></li>
 			<li>
-				<a href="../03_mission/data.html" class="menu_link03">체험리스트</a>
+				<a href="../03_mission/data.html" class="menu_link03" id="ad_experience">체험리스트</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../03_mission/data.html" class="menu_link031">데이터</a></li>
-					<li><a href="../03_mission/mission01.html" class="menu_link032">스타일러 시향 체험</a></li>
-					<li><a href="../03_mission/mission02.html" class="menu_link033">My Objet Color</a></li>
-					<li><a href="../03_mission/mission03.html" class="menu_link034">오브제갤러리 제품 월드컵</a></li>
-					<li><a href="../03_mission/mission04.html" class="menu_link035">숨은 QR 찾기</a></li>
-					<li><a href="../03_mission/mission05.html" class="menu_link036">SNS 공유하기</a></li>
+					<li><a href="../03_mission/data.html" class="menu_link031" id="ad_data">데이터</a></li>
+					<li><a href="../03_mission/mission01.html" class="menu_link032" id="ad_mission01">스타일러 시향 체험</a></li>
+					<li><a href="../03_mission/mission02.html" class="menu_link033" id="ad_mission02">My Objet Color</a></li>
+					<li><a href="../03_mission/mission03.html" class="menu_link034" id="ad_mission03">오브제갤러리 제품 월드컵</a></li>
+					<li><a href="../03_mission/mission04.html" class="menu_link035" id="ad_mission04">숨은 QR 찾기</a></li>
+					<li><a href="../03_mission/mission05.html" class="menu_link035" id="ad_mission05">SNS 공유하기</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../04_survey/survey_data.html" class="menu_link04">서베이</a>
+				<a href="../04_survey/survey_data.html" class="menu_link04" id="ad_survey">서베이</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../04_survey/survey_data.html" class="menu_link041">데이터</a></li>
-					<li><a href="../04_survey/survey_table.html" class="menu_link042">테이블</a></li>
+					<li><a href="../04_survey/survey_data.html" class="menu_link041" id="ad_survey_data">데이터</a></li>
+					<li><a href="../04_survey/survey_table.html" class="menu_link042" id="ad_survey_table">테이블</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../05_event/event_list.html" class="active menu_link05">이벤트</a>
+				<a href="../05_event/event_list.html" class="active menu_link05" id="ad_event">이벤트</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../05_event/event_list.html" class="active menu_link051">리스트</a></li>
-					<li><a href="../05_event/esg.html" class="menu_link052">ESG 서명하기</a></li>
-					<li><a href="../05_event/join.html" class="menu_link053">닷컴 회원가입</a></li>
+					<li><a href="../05_event/event_list.html" class="active menu_link051" id="ad_event_list">리스트</a></li>
+					<li><a href="../05_event/esg.html" class="menu_link052" id="ad_event_esg">ESG 서명하기</a></li>
+					<li><a href="../05_event/join.html" class="menu_link053" id="ad_event_join">닷컴 회원가입</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../06_about/vietnam_about.html" class="menu_link06">공간 소개</a>
+				<a href="../06_about/vietnam_about.html" class="menu_link06" id="ad_about">공간 소개</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../06_about/vietnam_about.html" class="menu_link061">베트남어</a></li>
-					<li><a href="../06_about/english_about.html" class="menu_link062">영어</a></li>
+					<li><a href="../06_about/vietnam_about.html" class="menu_link061" id="ad_about_vet">베트남어</a></li>
+					<li><a href="../06_about/english_about.html" class="menu_link062" id="ad_about_en">영어</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../07_banner/vietnam_banner.html" class="menu_link07">미션 배너</a>
+				<a href="../07_banner/vietnam_banner.html" class="menu_link07" id="ad_banner">미션 배너</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../07_banner/vietnam_banner.html" class="menu_link071">베트남어</a></li>
-					<li><a href="../07_banner/english_banner.html" class="menu_link072">영어</a></li>
+					<li><a href="../07_banner/vietnam_banner.html" class="menu_link071" id="ad_banner_vet">베트남어</a></li>
+					<li><a href="../07_banner/english_banner.html" class="menu_link072" id="ad_banner_en">영어</a></li>
 				</ul>
 			</li>
-			<li><a href="../08_obs/obs_scan.html" class="menu_link08">OBS 스캔</a></li>
+			<li>
+				<a href="../08_obs/obs_scan.html" class="menu_link08" id="ad_qr">OBS 스캔</a>
+				<ul class="adm_menulist_sub">
+					<li><a href="../08_obs/obs_scan.html" class="menu_link081" id="ad_qr_obs">제품 QR(OBS)</a></li>
+					<li><a href="../08_obs/place_scan.html" class="menu_link082" id="ad_qr_place">공간 QR</a></li>
+				</ul>
+			</li>
 		</ul>
 		<!-- adm_menulist end -->
 		<div class="gnb_bottom">
 			<button id="menu_link_adm" onclick="location.href='../09_admpeople/admpeople_list.html'">관리자 관리</button>
 			<div class="dropdown_bottom dropdown">
-				<button class="dropbtn">한국어</button>
+				<button class="dropbtn" id="ad_lang">한국어</button>
 				<div class="drop_cont">
-					<a href="#">한국어</a>
-					<a href="#">ENGLISH</a>
-					<a href="#">Tiếng Việt</a>
+					<a href="#" id="ad_ko_ko">한국어</a>
+					<a href="#" id="ad_ko_en">ENGLISH</a>
+					<a href="#" id="ad_ko_ti">Tiếng Việt</a>
 				</div>
 			</div>
 		</div>
@@ -83,18 +89,17 @@
 		<section class="adm_top_section">
 			<div class="left">
 				<ul class="top_nav_list">
-					<li class="prev_nav">이벤트</li>
-					<li class="prev_nav">리스트</li>
+					<li class="prev_nav" id="ad_event03_nav">이벤트</li>
+					<li class="prev_nav" id="ad_event_list03_nav">리스트</li>
 					<!-- 보기 페이지에서는 각 이벤트 이름이 노출됩니다. -->
-					<li class="current_nav"><h2>이벤트이름</h2></li>
+					<li class="current_nav"><h2 id="ad_event_view_nav">이벤트이름</h2></li>
 				</ul>
 			</div>
 			<div class="right">
 				<div class="dropdown_top dropdown">
-					<button class="dropbtn">어나더사이공</button>
+					<button class="dropbtn" id="ad_top_current">어나더사이공</button>
 					<div class="drop_cont">
-						<a href="#">어나더사이공</a>
-						<a href="#">화담숲</a>
+						<a href="#" id="ad_another">어나더사이공</a>
 					</div>
 				</div>
 			</div>
@@ -105,111 +110,111 @@
 				<form action="">
 					<!-- adm_form_top -->
 					<div class="adm_form_top right">
-						<button id="goto_event_cencel" type="button" onclick="location.href='./event_list.html'" class="btn_m btn_black btn">취소하기</button>
+						<button id="goto_event_cencel_v" type="button" onclick="location.href='./event_list.html'" class="btn_m btn_black btn">취소하기</button>
 					</div>
 					<!-- adm_form_top end -->
 					<!-- 상단 고정 -->
 					<div class="event_top input_box bg_beige">
 						<div class="input_row">
-							<h4>이벤트 기간</h4>
+							<h4 id="event_date_v">이벤트 기간</h4>
 							<div class="date_sch_wrap">
-								<input type="text" name="date_event_m" id="date_event_m_1" class="input_date" placeholder="날짜 선택" value="2023-11-21" disabled>
+								<input type="text" name="date_event_v" id="date_event_v_1" class="input_date" placeholder="날짜 선택" value="2023-11-21" disabled>
 								<span class="date_during">~</span>
-								<input type="text" name="date_event_m" id="date_event_m_2" class="input_date" placeholder="날짜 선택" value="2023-11-21" disabled>
+								<input type="text" name="date_event_v" id="date_event_v_2" class="input_date" placeholder="날짜 선택" value="2023-11-21" disabled>
 							</div>
 						</div>
 						<div class="input_row">
-							<h4>이벤트 형식</h4>
+							<h4 id="event_type_v">이벤트 형식</h4>
 							<!-- 이벤트 삭제, 보기에서는 선택된 체크박스 1개만 노출됩니다. -->
 							<div class="chk_wrap">
-								<label for="event_chk_d_1" class="chk">
-									<input type="radio" name="event_chk_d" id="event_chk_d_1" checked>
+								<label for="event_chk_v_1" class="chk">
+									<input type="radio" name="event_chk_v" id="event_chk_v_1" checked>
 									<span class="chkmark"></span>
-									<span class="chkText">이미지</span>
+									<span class="chkText" id="event_img_v">이미지</span>
 								</label>
 							</div>
 						</div>
 					</div>
 					<!-- 삭제페이지에서는 노출됩니다. 링크여부만 변경됩니다. -->
 					<div class="event_vet">
-						<h3 class="bg_w_title mb20">베트남어</h3>
+						<h3 class="bg_w_title mb20" id="event_lang_vet2">베트남어</h3>
 						<div class="input_box bg_gray">
 							<div class="input_row">
-								<h4>제목</h4>
-								<input type="text" placeholder="제목을 작성해 주세요." value="제목텍스트제목텍스트" disabled>
+								<h4 id="event_title_v1">제목</h4>
+								<input type="text" placeholder="제목을 작성해 주세요." id="event_input_v1" disabled>
 							</div>
 							<div class="input_row">
-								<h4>썸네일</h4>
-								<!-- 기본 file기능만 넣어서 jpg, png 용량 제한은 기능추가가 필요합니다. -->
-								<!-- 예시용으로 value값을 넣었습니다. -->
+								<h4 id="event_title_v2">썸네일</h4>
+								<!-- 기본 file기능만 넣어서 jpg, png 용량 제한은 기능추가가 필요합니다.
+								세번째 input만 file작동하는 input이고, 나머지는 퍼블 보여지는 용도로 제작한 태그들이며, 번역용 텍스트가 변환 용도로 id값을 추가했습니다. 
+								그래서 같은 id가 들어갑니다. 
+								예시용으로 value값을 넣었습니다. -->
 								<div class="filebox">
-									<!-- 삭제시 input영역이 disabled되면, 자동으로 label이 숨겨집니다. -->
-									<input class="upload" value="첨부파일" placeholder="첨부파일" disabled>
-									<label for="file1">파일찾기</label> 
-									<input type="file" id="file1" disabled>
-									<p class="mini_text">*0000*0000 해상도 JPG 또는 PNG</p>
+									<input class="upload" placeholder="첨부파일" id="event_upload_file_v2" disabled>
+									<label for="event_file_v2" id="event_find_file_v2">파일찾기</label> 
+									<input type="file" id="event_file_v2" disabled>
+									<p class="mini_text" id="event_filetip_v2">*0000*0000 해상도 JPG 또는 PNG</p>
 								</div>
 							</div>
 							<div class="input_row">
-								<h4>상세페이지</h4>
+								<h4 id="event_title_v3">상세페이지</h4>
 								<div class="filebox">
-									<!-- 삭제시 input영역이 disabled되면, 자동으로 label이 숨겨집니다. -->
-									<input class="upload" value="첨부파일" placeholder="첨부파일" disabled>
-									<label for="file2">파일찾기</label> 
-									<input type="file" id="file2" disabled>
-									<p class="mini_text">*0000*0000 해상도 JPG 또는 PNG</p>
+									<input class="upload" placeholder="첨부파일" id="event_upload_file_v3" disabled>
+									<label for="event_file_v3" id="event_find_file_v3">파일찾기</label> 
+									<input type="file" id="event_file_v3" disabled>
+									<p class="mini_text" id="event_filetip_v3">*0000*0000 해상도 JPG 또는 PNG</p>
 								</div>
 							</div>
 							<div class="input_row">
-								<h4>내용</h4>
-								<textarea name="" id="event_textarea_w" cols="60" rows="10" placeholder="내용을 입력해 주세요." value="내용 텍스트 내용 텍스트" disabled>내용 텍스트 내용 텍스트</textarea>
+								<h4 id="event_title_v4">내용</h4>
+								<textarea name="" cols="60" rows="10" placeholder="내용을 입력해 주세요." id="event_textarea_v4" disabled></textarea>
 							</div>
 							<div class="input_link input_row" style="display: none;">
-								<h4>링크</h4>
+								<h4 id="event_title_v5">링크</h4>
 								<div class="linkbox">
-									<input type="text" placeholder="링크를 입력해 주세요." value="http://www.co.kr" disabled>
-									<p class="mini_text">*http:// 형태의 URL</p>
+									<input type="text" placeholder="링크를 입력해 주세요." id="event_input_v5" disabled>
+									<p class="mini_text" id="event_linktip_v5">*http:// 형태의 URL</p>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="event_eng">
-						<h3 class="bg_w_title mb20">영어</h3>
+						<h3 class="bg_w_title mb20" id="event_lang_eng2">영어</h3>
 						<div class="input_box bg_gray">
 							<div class="input_row">
-								<h4>제목</h4>
-								<input type="text" placeholder="제목을 작성해 주세요." value="제목텍스트제목텍스트" disabled>
+								<h4 id="event_title_v6">제목</h4>
+								<input type="text" placeholder="제목을 작성해 주세요." id="event_input_v6" disabled>
 							</div>
 							<div class="input_row">
-								<h4>썸네일</h4>
-								<!-- 기본 file기능만 넣어서 jpg, png 용량 제한은 기능추가가 필요합니다. -->
+								<h4 id="event_title_v7">썸네일</h4>
+								<!-- 기본 file기능만 넣어서 jpg, png 용량 제한은 기능추가가 필요합니다.
+								세번째 input만 file작동하는 input이고, 나머지는 퍼블 보여지는 용도로 제작한 태그들이며, 번역용 텍스트가 변환 용도로 id값을 추가했습니다. 
+								그래서 같은 id가 들어갑니다. -->
 								<div class="filebox">
-									<!-- 삭제시 input영역이 disabled되면, 자동으로 label이 숨겨집니다. -->
-									<input class="upload" value="첨부파일" placeholder="첨부파일" disabled>
-									<label for="file3">파일찾기</label> 
-									<input type="file" id="file3" disabled>
-									<p class="mini_text">*0000*0000 해상도 JPG 또는 PNG</p>
+									<input class="upload" placeholder="첨부파일" id="event_upload_file_v7" disabled>
+									<label for="event_file_v7" id="event_find_file_v7">파일찾기</label> 
+									<input type="file" id="event_file_v7" disabled>
+									<p class="mini_text" id="event_filetip_v7">*0000*0000 해상도 JPG 또는 PNG</p>
 								</div>
 							</div>
 							<div class="input_row">
-								<h4>상세페이지</h4>
+								<h4 id="event_title_v8">상세페이지</h4>
 								<div class="filebox">
-									<!-- 삭제시 input영역이 disabled되면, 자동으로 label이 숨겨집니다. -->
-									<input class="upload" value="첨부파일" placeholder="첨부파일" disabled>
-									<label for="file4">파일찾기</label> 
-									<input type="file" id="file4" disabled>
-									<p class="mini_text">*0000*0000 해상도 JPG 또는 PNG</p>
+									<input class="upload" placeholder="첨부파일" id="event_upload_file_v8" disabled>
+									<label for="event_file_v8" id="event_find_file_v8">파일찾기</label> 
+									<input type="file" id="event_file_v8" disabled>
+									<p class="mini_text" id="event_filetip_v8">*0000*0000 해상도 JPG 또는 PNG</p>
 								</div>
 							</div>
 							<div class="input_row">
-								<h4>내용</h4>
-								<textarea name="" id="event_textarea_w" cols="60" rows="10" placeholder="내용을 입력해 주세요." value="내용 텍스트 내용 텍스트" disabled>내용 텍스트 내용 텍스트</textarea>
+								<h4 id="event_title_v9">내용</h4>
+								<textarea name="" cols="60" rows="10" placeholder="내용을 입력해 주세요." id="event_textarea_v9" disabled></textarea>
 							</div>
 							<div class="input_link input_row" style="display: none;">
-								<h4>링크</h4>
+								<h4 id="event_title_v10">링크</h4>
 								<div class="linkbox">
-									<input type="text" placeholder="링크를 입력해 주세요." value="http://www.co.kr" disabled>
-									<p class="mini_text">*http:// 형태의 URL</p>
+									<input type="text" placeholder="링크를 입력해 주세요." id="event_input_v10" disabled>
+									<p class="mini_text" id="event_linktip_v10">*http:// 형태의 URL</p>
 								</div>
 							</div>
 						</div>
@@ -221,14 +226,14 @@
 	<script>
 		$(document).ready(function() {
 			// 라디오 버튼 상태 변경 시 이벤트 핸들러
-			$('input[name="event_chk_d"]').change(function() {
-				if ($('#event_chk_d_1').is(':checked')) {
-					// event_chk_d_1 선택 시
+			$('input[name="event_chk_v"]').change(function() {
+				if ($('#event_chk_v_1').is(':checked')) {
+					// event_chk_v_1 선택 시
 					$('.event_vet').css('display', 'block');
 					$('.event_eng').css('display', 'block');
 					$('.input_link').css('display', 'none');
-				} else if ($('#event_chk_d_2').is(':checked')) {
-					// event_chk_d_2 선택 시
+				} else if ($('#event_chk_v_2').is(':checked')) {
+					// event_chk_v_2 선택 시
 					$('.event_vet').css('display', 'block');
 					$('.event_eng').css('display', 'block');
 					$('.input_link').css('display', 'flex');
