--- a/admin/05_event/event_write.html
+++ b/admin/05_event/event_write.html
@@ -20,59 +20,65 @@
 		<h1 class="adm_logo"><a href="../01_dashboard/dashboard.html"><img src="../image/logo_side.svg" alt="Another Saigon by LG"></a></h1>
 		<!-- adm_menulist -->
 		<ul class="adm_menulist">
-			<li><a href="../01_dashboard/dashboard.html" class="menu_link01">대시보드</a></li>
-			<li><a href="../02_member/member_list.html" class="menu_link02">회원리스트</a></li>
+			<li><a href="../01_dashboard/dashboard.html" class="menu_link01" id="ad_dash">대시보드</a></li>
+			<li><a href="../02_member/member_list.html" class="menu_link02" id="ad_people">회원리스트</a></li>
 			<li>
-				<a href="../03_mission/data.html" class="menu_link03">체험리스트</a>
+				<a href="../03_mission/data.html" class="menu_link03" id="ad_experience">체험리스트</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../03_mission/data.html" class="menu_link031">데이터</a></li>
-					<li><a href="../03_mission/mission01.html" class="menu_link032">스타일러 시향 체험</a></li>
-					<li><a href="../03_mission/mission02.html" class="menu_link033">My Objet Color</a></li>
-					<li><a href="../03_mission/mission03.html" class="menu_link034">오브제갤러리 제품 월드컵</a></li>
-					<li><a href="../03_mission/mission04.html" class="menu_link035">숨은 QR 찾기</a></li>
-					<li><a href="../03_mission/mission05.html" class="menu_link036">SNS 공유하기</a></li>
+					<li><a href="../03_mission/data.html" class="menu_link031" id="ad_data">데이터</a></li>
+					<li><a href="../03_mission/mission01.html" class="menu_link032" id="ad_mission01">스타일러 시향 체험</a></li>
+					<li><a href="../03_mission/mission02.html" class="menu_link033" id="ad_mission02">My Objet Color</a></li>
+					<li><a href="../03_mission/mission03.html" class="menu_link034" id="ad_mission03">오브제갤러리 제품 월드컵</a></li>
+					<li><a href="../03_mission/mission04.html" class="menu_link035" id="ad_mission04">숨은 QR 찾기</a></li>
+					<li><a href="../03_mission/mission05.html" class="menu_link035" id="ad_mission05">SNS 공유하기</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../04_survey/survey_data.html" class="menu_link04">서베이</a>
+				<a href="../04_survey/survey_data.html" class="menu_link04" id="ad_survey">서베이</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../04_survey/survey_data.html" class="menu_link041">데이터</a></li>
-					<li><a href="../04_survey/survey_table.html" class="menu_link042">테이블</a></li>
+					<li><a href="../04_survey/survey_data.html" class="menu_link041" id="ad_survey_data">데이터</a></li>
+					<li><a href="../04_survey/survey_table.html" class="menu_link042" id="ad_survey_table">테이블</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../05_event/event_list.html" class="active menu_link05">이벤트</a>
+				<a href="../05_event/event_list.html" class="active menu_link05" id="ad_event">이벤트</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../05_event/event_list.html" class="active menu_link051">리스트</a></li>
-					<li><a href="../05_event/esg.html" class="menu_link052">ESG 서명하기</a></li>
-					<li><a href="../05_event/join.html" class="menu_link053">닷컴 회원가입</a></li>
+					<li><a href="../05_event/event_list.html" class="active menu_link051" id="ad_event_list">리스트</a></li>
+					<li><a href="../05_event/esg.html" class="menu_link052" id="ad_event_esg">ESG 서명하기</a></li>
+					<li><a href="../05_event/join.html" class="menu_link053" id="ad_event_join">닷컴 회원가입</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../06_about/vietnam_about.html" class="menu_link06">공간 소개</a>
+				<a href="../06_about/vietnam_about.html" class="menu_link06" id="ad_about">공간 소개</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../06_about/vietnam_about.html" class="menu_link061">베트남어</a></li>
-					<li><a href="../06_about/english_about.html" class="menu_link062">영어</a></li>
+					<li><a href="../06_about/vietnam_about.html" class="menu_link061" id="ad_about_vet">베트남어</a></li>
+					<li><a href="../06_about/english_about.html" class="menu_link062" id="ad_about_en">영어</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../07_banner/vietnam_banner.html" class="menu_link07">미션 배너</a>
+				<a href="../07_banner/vietnam_banner.html" class="menu_link07" id="ad_banner">미션 배너</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../07_banner/vietnam_banner.html" class="menu_link071">베트남어</a></li>
-					<li><a href="../07_banner/english_banner.html" class="menu_link072">영어</a></li>
+					<li><a href="../07_banner/vietnam_banner.html" class="menu_link071" id="ad_banner_vet">베트남어</a></li>
+					<li><a href="../07_banner/english_banner.html" class="menu_link072" id="ad_banner_en">영어</a></li>
 				</ul>
 			</li>
-			<li><a href="../08_obs/obs_scan.html" class="menu_link08">OBS 스캔</a></li>
+			<li>
+				<a href="../08_obs/obs_scan.html" class="menu_link08" id="ad_qr">OBS 스캔</a>
+				<ul class="adm_menulist_sub">
+					<li><a href="../08_obs/obs_scan.html" class="menu_link081" id="ad_qr_obs">제품 QR(OBS)</a></li>
+					<li><a href="../08_obs/place_scan.html" class="menu_link082" id="ad_qr_place">공간 QR</a></li>
+				</ul>
+			</li>
 		</ul>
 		<!-- adm_menulist end -->
 		<div class="gnb_bottom">
 			<button id="menu_link_adm" onclick="location.href='../09_admpeople/admpeople_list.html'">관리자 관리</button>
 			<div class="dropdown_bottom dropdown">
-				<button class="dropbtn">한국어</button>
+				<button class="dropbtn" id="ad_lang">한국어</button>
 				<div class="drop_cont">
-					<a href="#">한국어</a>
-					<a href="#">ENGLISH</a>
-					<a href="#">Tiếng Việt</a>
+					<a href="#" id="ad_ko_ko">한국어</a>
+					<a href="#" id="ad_ko_en">ENGLISH</a>
+					<a href="#" id="ad_ko_ti">Tiếng Việt</a>
 				</div>
 			</div>
 		</div>
@@ -83,17 +89,16 @@
 		<section class="adm_top_section">
 			<div class="left">
 				<ul class="top_nav_list">
-					<li class="prev_nav">이벤트</li>
-					<li class="prev_nav">리스트</li>
-					<li class="current_nav"><h2>생성하기</h2></li>
+					<li class="prev_nav" id="ad_event02_nav">이벤트</li>
+					<li class="prev_nav" id="ad_event_list02_nav">리스트</li>
+					<li class="current_nav"><h2 id="ad_event_write_nav">생성하기</h2></li>
 				</ul>
 			</div>
 			<div class="right">
 				<div class="dropdown_top dropdown">
-					<button class="dropbtn">어나더사이공</button>
+					<button class="dropbtn" id="ad_top_current">어나더사이공</button>
 					<div class="drop_cont">
-						<a href="#">어나더사이공</a>
-						<a href="#">화담숲</a>
+						<a href="#" id="ad_another">어나더사이공</a>
 					</div>
 				</div>
 			</div>
@@ -104,16 +109,16 @@
 				<form action="">
 					<!-- adm_form_top -->
 					<div class="adm_form_top right">
-						<button id="goto_event_cencel" type="button" onclick="location.href='./event_list.html'" class="btn_m btn_black btn">취소하기</button>
+						<button id="goto_event_cencel_w" type="button" onclick="location.href='./event_list.html'" class="btn_m btn_black btn">취소하기</button>
 						<!-- 모든 각 부분별로 입력값이 입력됬을때 disaled가 해제되면서 생성 활성화 됩니다. admpeople_write.html에 간단한 스크립트로 구현했습니다. 
 						입력 안됬을때 원복되거나 이미지, 이미지링크 줄때 등의 디테일한 구현이 안된 상태입니다. 보완 부탁드립니다ㅠ -->
-						<button id="ok_event_write" type="button" class="btn_m btn_primary btn" disabled>생성하기</button>
+						<button id="ok_event_write_w" type="button" class="btn_m btn_primary btn" disabled>생성하기</button>
 					</div>
 					<!-- adm_form_top end -->
 					<!-- 상단 고정 -->
 					<div class="event_top input_box bg_beige">
 						<div class="input_row">
-							<h4>이벤트 기간</h4>
+							<h4 id="event_date_w">이벤트 기간</h4>
 							<div class="date_sch_wrap">
 								<input type="text" name="date_event_w" id="date_event_w_1" class="input_date" placeholder="날짜 선택">
 								<span class="date_during">~</span>
@@ -121,95 +126,99 @@
 							</div>
 						</div>
 						<div class="input_row">
-							<h4>이벤트 형식</h4>
+							<h4 id="event_type_w">이벤트 형식</h4>
 							<div class="chk_wrap">
 								<label for="event_chk_w_1" class="chk">
 									<input type="radio" name="event_chk_w" id="event_chk_w_1">
 									<span class="chkmark"></span>
-									<span class="chkText">이미지</span>
+									<span class="chkText" id="event_img_w">이미지</span>
 								</label>
 								<label for="event_chk_w_2" class="chk">
 									<input type="radio" name="event_chk_w" id="event_chk_w_2">
 									<span class="chkmark"></span>
-									<span class="chkText">이미지+링크</span>
+									<span class="chkText" id="event_imglink_w">이미지+링크</span>
 								</label>
 							</div>
 						</div>
 					</div>
 					<div class="event_vet" style="display:none;">
-						<h3 class="bg_w_title mb20">베트남어</h3>
+						<h3 class="bg_w_title mb20" id="event_lang_vet1">베트남어</h3>
 						<div class="input_box bg_gray">
 							<div class="input_row">
-								<h4>제목</h4>
-								<input type="text" placeholder="제목을 작성해 주세요.">
+								<h4 id="event_title_w1">제목</h4>
+								<input type="text" placeholder="제목을 작성해 주세요." id="event_input_w1">
 							</div>
 							<div class="input_row">
-								<h4>썸네일</h4>
-								<!-- 기본 file기능만 넣어서 jpg, png 용량 제한은 기능추가가 필요합니다. -->
+								<h4 id="event_title_w2">썸네일</h4>
+								<!-- 기본 file기능만 넣어서 jpg, png 용량 제한은 기능추가가 필요합니다.
+								세번째 input만 file작동하는 input이고, 나머지는 퍼블 보여지는 용도로 제작한 태그들이며, 번역용 텍스트가 변환 용도로 id값을 추가했습니다. 
+								그래서 같은 id가 들어갑니다. -->
 								<div class="filebox">
-									<input class="upload" placeholder="첨부파일">
-									<label for="file1">파일찾기</label> 
-									<input type="file" id="file1">
-									<p class="mini_text">*0000*0000 해상도 JPG 또는 PNG</p>
+									<input class="upload" placeholder="첨부파일" id="event_upload_file_w2">
+									<label for="event_file_w2" id="event_find_file_w2">파일찾기</label> 
+									<input type="file" id="event_file_w2">
+									<p class="mini_text" id="event_filetip_w2">*0000*0000 해상도 JPG 또는 PNG</p>
 								</div>
 							</div>
 							<div class="input_row">
-								<h4>상세페이지</h4>
+								<h4 id="event_title_w3">상세페이지</h4>
 								<div class="filebox">
-									<input class="upload" placeholder="첨부파일">
-									<label for="file2">파일찾기</label> 
-									<input type="file" id="file2">
-									<p class="mini_text">*0000*0000 해상도 JPG 또는 PNG</p>
+									<input class="upload" placeholder="첨부파일" id="event_upload_file_w3">
+									<label for="event_file_w3" id="event_find_file_w3">파일찾기</label> 
+									<input type="file" id="event_file_w3">
+									<p class="mini_text" id="event_filetip_w3">*0000*0000 해상도 JPG 또는 PNG</p>
 								</div>
 							</div>
 							<div class="input_row">
-								<h4>내용</h4>
-								<textarea name="" id="event_textarea_w" cols="60" rows="10" placeholder="내용을 입력해 주세요."></textarea>
+								<h4 id="event_title_w4">내용</h4>
+								<textarea name="" cols="60" rows="10" placeholder="내용을 입력해 주세요." id="event_textarea_w4"></textarea>
 							</div>
 							<div class="input_link input_row" style="display: none;">
-								<h4>링크</h4>
+								<h4 id="event_title_w5">링크</h4>
 								<div class="linkbox">
-									<input type="text" placeholder="링크를 입력해 주세요.">
-									<p class="mini_text">*http:// 형태의 URL</p>
+									<input type="text" placeholder="링크를 입력해 주세요." id="event_input_w5">
+									<p class="mini_text" id="event_linktip_w5">*http:// 형태의 URL</p>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="event_eng" style="display:none;">
-						<h3 class="bg_w_title mb20">영어</h3>
+						<h3 class="bg_w_title mb20" id="event_lang_eng1">영어</h3>
 						<div class="input_box bg_gray">
 							<div class="input_row">
-								<h4>제목</h4>
-								<input type="text" placeholder="제목을 작성해 주세요.">
+								<h4 id="event_title_w6">제목</h4>
+								<input type="text" placeholder="제목을 작성해 주세요." id="event_input_w6">
 							</div>
 							<div class="input_row">
-								<h4>썸네일</h4>
-								<!-- 기본 file기능만 넣어서 jpg, png 용량 제한은 기능추가가 필요합니다. -->
+								<h4 id="event_title_w7">썸네일</h4>
+								<!-- 기본 file기능만 넣어서 jpg, png 용량 제한은 기능추가가 필요합니다.
+								세번째 input만 file작동하는 input이고, 나머지는 퍼블 보여지는 용도로 제작한 태그들이며, 번역용 텍스트가 변환 용도로 id값을 추가했습니다. 
+								그래서 같은 id가 들어갑니다. -->
 								<div class="filebox">
-									<input class="upload" placeholder="첨부파일">
-									<label for="file3">파일찾기</label> 
-									<input type="file" id="file3">
-									<p class="mini_text">*0000*0000 해상도 JPG 또는 PNG</p>
+									<input class="upload" placeholder="첨부파일" id="event_upload_file_w7">
+									<label for="event_file_w7" id="event_find_file_w7">파일찾기</label> 
+									<input type="file" id="event_file_w7">
+									<p class="mini_text" id="event_filetip_w7">*0000*0000 해상도 JPG 또는 PNG</p>
 								</div>
 							</div>
 							<div class="input_row">
-								<h4>상세페이지</h4>
+								<h4 id="event_title_w8">상세페이지</h4>
 								<div class="filebox">
-									<input class="upload" placeholder="첨부파일">
-									<label for="file4">파일찾기</label> 
-									<input type="file" id="file4">
-									<p class="mini_text">*0000*0000 해상도 JPG 또는 PNG</p>
+									<input class="upload" placeholder="첨부파일" id="event_upload_file_w8">
+									<label for="event_file_w8" id="event_find_file_w8">파일찾기</label> 
+									<input type="file" id="event_file_w8">
+									<p class="mini_text" id="event_filetip_w8">*0000*0000 해상도 JPG 또는 PNG</p>
 								</div>
 							</div>
 							<div class="input_row">
-								<h4>내용</h4>
-								<textarea name="" id="event_textarea_w" cols="60" rows="10" placeholder="내용을 입력해 주세요."></textarea>
+								<h4 id="event_title_w9">내용</h4>
+								<textarea name="" cols="60" rows="10" placeholder="내용을 입력해 주세요." id="event_textarea_w9"></textarea>
 							</div>
 							<div class="input_link input_row" style="display: none;">
-								<h4>링크</h4>
+								<h4 id="event_title_w10">링크</h4>
 								<div class="linkbox">
-									<input type="text" placeholder="링크를 입력해 주세요.">
-									<p class="mini_text">*http:// 형태의 URL</p>
+									<input type="text" placeholder="링크를 입력해 주세요." id="event_input_w10">
+									<p class="mini_text" id="event_linktip_w10">*http:// 형태의 URL</p>
 								</div>
 							</div>
 						</div>
