--- a/admin/07_banner/english_modify.html
+++ b/admin/07_banner/english_modify.html
@@ -20,59 +20,65 @@
 		<h1 class="adm_logo"><a href="../01_dashboard/dashboard.html"><img src="../image/logo_side.svg" alt="Another Saigon by LG"></a></h1>
 		<!-- adm_menulist -->
 		<ul class="adm_menulist">
-			<li><a href="../01_dashboard/dashboard.html" class="menu_link01">대시보드</a></li>
-			<li><a href="../02_member/member_list.html" class="menu_link02">회원리스트</a></li>
+			<li><a href="../01_dashboard/dashboard.html" class="menu_link01" id="ad_dash">대시보드</a></li>
+			<li><a href="../02_member/member_list.html" class="menu_link02" id="ad_people">회원리스트</a></li>
 			<li>
-				<a href="../03_mission/data.html" class="menu_link03">체험리스트</a>
+				<a href="../03_mission/data.html" class="menu_link03" id="ad_experience">체험리스트</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../03_mission/data.html" class="menu_link031">데이터</a></li>
-					<li><a href="../03_mission/mission01.html" class="menu_link032">스타일러 시향 체험</a></li>
-					<li><a href="../03_mission/mission02.html" class="menu_link033">My Objet Color</a></li>
-					<li><a href="../03_mission/mission03.html" class="menu_link034">오브제갤러리 제품 월드컵</a></li>
-					<li><a href="../03_mission/mission04.html" class="menu_link035">숨은 QR 찾기</a></li>
-					<li><a href="../03_mission/mission05.html" class="menu_link036">SNS 공유하기</a></li>
+					<li><a href="../03_mission/data.html" class="menu_link031" id="ad_data">데이터</a></li>
+					<li><a href="../03_mission/mission01.html" class="menu_link032" id="ad_mission01">스타일러 시향 체험</a></li>
+					<li><a href="../03_mission/mission02.html" class="menu_link033" id="ad_mission02">My Objet Color</a></li>
+					<li><a href="../03_mission/mission03.html" class="menu_link034" id="ad_mission03">오브제갤러리 제품 월드컵</a></li>
+					<li><a href="../03_mission/mission04.html" class="menu_link035" id="ad_mission04">숨은 QR 찾기</a></li>
+					<li><a href="../03_mission/mission05.html" class="menu_link035" id="ad_mission05">SNS 공유하기</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../04_survey/survey_data.html" class="menu_link04">서베이</a>
+				<a href="../04_survey/survey_data.html" class="menu_link04" id="ad_survey">서베이</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../04_survey/survey_data.html" class="menu_link041">데이터</a></li>
-					<li><a href="../04_survey/survey_table.html" class="menu_link042">테이블</a></li>
+					<li><a href="../04_survey/survey_data.html" class="menu_link041" id="ad_survey_data">데이터</a></li>
+					<li><a href="../04_survey/survey_table.html" class="menu_link042" id="ad_survey_table">테이블</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../05_event/event_list.html" class="menu_link05">이벤트</a>
+				<a href="../05_event/event_list.html" class="menu_link05" id="ad_event">이벤트</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../05_event/event_list.html" class="menu_link051">리스트</a></li>
-					<li><a href="../05_event/esg.html" class="menu_link052">ESG 서명하기</a></li>
-					<li><a href="../05_event/join.html" class="menu_link053">닷컴 회원가입</a></li>
+					<li><a href="../05_event/event_list.html" class="menu_link051" id="ad_event_list">리스트</a></li>
+					<li><a href="../05_event/esg.html" class="menu_link052" id="ad_event_esg">ESG 서명하기</a></li>
+					<li><a href="../05_event/join.html" class="menu_link053" id="ad_event_join">닷컴 회원가입</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../06_about/vietnam_about.html" class="menu_link06">공간 소개</a>
+				<a href="../06_about/vietnam_about.html" class="menu_link06" id="ad_about">공간 소개</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../06_about/vietnam_about.html" class="menu_link061">베트남어</a></li>
-					<li><a href="../06_about/english_about.html" class="menu_link062">영어</a></li>
+					<li><a href="../06_about/vietnam_about.html" class="menu_link061" id="ad_about_vet">베트남어</a></li>
+					<li><a href="../06_about/english_about.html" class="menu_link062" id="ad_about_en">영어</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="../07_banner/vietnam_banner.html" class="active menu_link07">미션 배너</a>
+				<a href="../07_banner/vietnam_banner.html" class="active menu_link07" id="ad_banner">미션 배너</a>
 				<ul class="adm_menulist_sub">
-					<li><a href="../07_banner/vietnam_banner.html" class="menu_link071">베트남어</a></li>
-					<li><a href="../07_banner/english_banner.html" class="active menu_link072">영어</a></li>
+					<li><a href="../07_banner/vietnam_banner.html" class="menu_link071" id="ad_banner_vet">베트남어</a></li>
+					<li><a href="../07_banner/english_banner.html" class="active menu_link072" id="ad_banner_en">영어</a></li>
 				</ul>
 			</li>
-			<li><a href="../08_obs/obs_scan.html" class="menu_link08">OBS 스캔</a></li>
+			<li>
+				<a href="../08_obs/obs_scan.html" class="menu_link08" id="ad_qr">OBS 스캔</a>
+				<ul class="adm_menulist_sub">
+					<li><a href="../08_obs/obs_scan.html" class="menu_link081" id="ad_qr_obs">제품 QR(OBS)</a></li>
+					<li><a href="../08_obs/place_scan.html" class="menu_link082" id="ad_qr_place">공간 QR</a></li>
+				</ul>
+			</li>
 		</ul>
 		<!-- adm_menulist end -->
 		<div class="gnb_bottom">
 			<button id="menu_link_adm" onclick="location.href='../09_admpeople/admpeople_list.html'">관리자 관리</button>
 			<div class="dropdown_bottom dropdown">
-				<button class="dropbtn">한국어</button>
+				<button class="dropbtn" id="ad_lang">한국어</button>
 				<div class="drop_cont">
-					<a href="#">한국어</a>
-					<a href="#">ENGLISH</a>
-					<a href="#">Tiếng Việt</a>
+					<a href="#" id="ad_ko_ko">한국어</a>
+					<a href="#" id="ad_ko_en">ENGLISH</a>
+					<a href="#" id="ad_ko_ti">Tiếng Việt</a>
 				</div>
 			</div>
 		</div>
@@ -83,17 +89,16 @@
 		<section class="adm_top_section">
 			<div class="left">
 				<ul class="top_nav_list">
-					<li class="prev_nav">미션 배너</li>
-					<li class="prev_nav">영어</li>
-					<li class="current_nav"><h2>수정하기</h2></li>
+					<li class="prev_nav" id="ad_banner04_nav">미션 배너</li>
+					<li class="prev_nav" id="ad_banner04_eng_nav">영어</li>
+					<li class="current_nav"><h2 id="ad_banner04_modify_nav">수정하기</h2></li>
 				</ul>
 			</div>
 			<div class="right">
 				<div class="dropdown_top dropdown">
-					<button class="dropbtn">어나더사이공</button>
+					<button class="dropbtn" id="ad_top_current">어나더사이공</button>
 					<div class="drop_cont">
-						<a href="#">어나더사이공</a>
-						<a href="#">화담숲</a>
+						<a href="#" id="ad_another">어나더사이공</a>
 					</div>
 				</div>
 			</div>
@@ -104,8 +109,8 @@
 				<form action="">
 					<!-- adm_form_top -->
 					<div class="adm_form_top right">
-						<button id="goto_banner_cencel" type="button" onclick="location.href='./english_banner.html'" class="btn_m btn_black btn">취소하기</button>
-						<button id="ok_banner_write" type="button" onclick="location.href='./english_banner.html'" class="btn_m btn_primary btn" disabled>저장하기</button>
+						<button id="goto_banner_cencel_em" type="button" onclick="location.href='./english_banner.html'" class="btn_m btn_black btn">취소하기</button>
+						<button id="ok_banner_write_em" type="button" onclick="location.href='./english_banner.html'" class="btn_m btn_primary btn" disabled>저장하기</button>
 					</div>
 					<!-- adm_form_top end -->
 					<!-- banner_wrap -->
@@ -114,51 +119,47 @@
 							<li class="ui-state-default">
 								<div class="input_box bg_gray">
 									<div class="input_row">
-										<h4>이미지</h4>
-										<!-- 기본 file기능만 넣어서 jpg, png 용량 제한은 기능추가가 필요합니다. -->
-										<!-- 예시용으로 value값을 넣었습니다. -->
+										<h4 id="banner_title_em1">이미지</h4>
 										<div class="filebox">
-											<input class="upload" placeholder="첨부파일">
-											<label for="file1">파일찾기</label> 
-											<input type="file" id="file1">
-											<p class="mini_text">*0000*0000 해상도 JPG 또는 PNG</p>
+											<input class="upload" placeholder="첨부파일" id="banner_upload_file_em1">
+											<label for="banner_file_em1" id="banner_find_file_em1">파일찾기</label> 
+											<input type="file" id="banner_file_em1">
+											<p class="mini_text" id="banner_filetip_em1">*0000*0000 해상도 JPG 또는 PNG</p>
 										</div>
 									</div>
 									<div class="input_link input_row">
-										<h4>Link</h4>
+										<h4 id="banner_title_em2">Link</h4>
 										<div class="linkbox">
-											<input type="text" placeholder="http://" value="http://www.co.kr">
-											<p class="mini_text">*http:// 형태의 URL</p>
+											<input type="text" placeholder="http://" value="http://www.co.kr" id="banner_input_em2">
+											<p class="mini_text" id="banner_linktip_em2">*http:// 형태의 URL</p>
 										</div>
 									</div>
-									<button class="btn_xs btn_darkgray btn sortable_del">삭제</button>
+									<button class="btn_xs btn_darkgray btn sortable_del" id="banner_btn_em2">삭제</button>
 								</div>
 							</li>
 							<li class="ui-state-default">
 								<div class="input_box bg_gray">
 									<div class="input_row">
-										<h4>이미지</h4>
-										<!-- 기본 file기능만 넣어서 jpg, png 용량 제한은 기능추가가 필요합니다. -->
-										<!-- 예시용으로 value값을 넣었습니다. -->
+										<h4 id="banner_title_em3">이미지</h4>
 										<div class="filebox">
-											<input class="upload" placeholder="첨부파일">
-											<label for="file1">파일찾기</label> 
-											<input type="file" id="file1">
-											<p class="mini_text">*0000*0000 해상도 JPG 또는 PNG</p>
+											<input class="upload" placeholder="첨부파일" id="banner_upload_file_em3">
+											<label for="banner_file_em3" id="banner_find_file_em3">파일찾기</label> 
+											<input type="file" id="banner_file_em3">
+											<p class="mini_text" id="banner_filetip_em3">*0000*0000 해상도 JPG 또는 PNG</p>
 										</div>
 									</div>
 									<div class="input_link input_row">
-										<h4>Link</h4>
+										<h4 id="banner_title_em4">Link</h4>
 										<div class="linkbox">
-											<input type="text" placeholder="http://" value="http://www.co.kr">
-											<p class="mini_text">*http:// 형태의 URL</p>
+											<input type="text" placeholder="http://" value="http://www.co.kr" id="banner_input_em4">
+											<p class="mini_text" id="banner_linktip_em4">*http:// 형태의 URL</p>
 										</div>
 									</div>
-									<button class="btn_xs btn_darkgray btn sortable_del">삭제</button>
+									<button class="btn_xs btn_darkgray btn sortable_del" id="banner_btn_em4">삭제</button>
 								</div>
 							</li>
 							<div class="t_center btn_wrap">
-								<button id="plus_gf" class="plus_banner btn_m btn_black btn">추가하기</button>
+								<button id="plus_gf_bem" type="button" class="plus_banner btn_m btn_black btn">추가하기</button>
 							</div>
 						</ul>
 					</div>
@@ -169,53 +170,40 @@
 	</main>
 	<script>
 		$(document).ready(function() {
-			// 페이지 로드 시 첫 번째 li.ui-state-default 요소를 저장합니다.
 			var originalLi = $('.ui-state-default:first').clone();
-
-			// 새로운 li를 추가하는 이벤트 핸들러
 			$(document).on('click', '.plus_banner', function() {
 				var newLi = originalLi.clone();
 				newLi.find('input').val('');
 				$(this).closest('.banner_wrap').find('.btn_wrap').before(newLi);
 			});
-
-			// 기존 li를 삭제하는 이벤트 핸들러
 			$(document).on('click', '.sortable_del', function() {
 				$(this).closest('li.ui-state-default').remove();
 			});
 		});
 
 		/* 수정버튼 활성화 스크립트인데, li 움직일때는 활성화가 안되어서ㅠ 보완 부탁드립니다... */
-	$(document).ready(function() {
-		// input 요소의 초기 값을 저장하기 위한 객체 초기화
-		var initialValues = {};
-
-		// 페이지 로드 시 모든 input 요소의 현재 값을 초기 값으로 저장
-		$('input, textarea').each(function() {
-			initialValues[this.id] = $(this).val();
-		});
-
-		// input 및 textarea 요소가 변경될 때 이벤트를 감지합니다.
-		$('input, textarea').on('input', function() {
-			// 변경된 요소가 있는지 확인
-			var anyModified = false;
+		$(document).ready(function() {
+			var initialValues = {};
 			$('input, textarea').each(function() {
-				// 현재 값과 초기 값이 다르면 anyModified를 true로 설정
-				if ($(this).val() !== initialValues[this.id]) {
-					anyModified = true;
-					return false; // 반복 중지
-				}
+				initialValues[this.id] = $(this).val();
 			});
 
-			// 하나라도 변경된 요소가 있다면, 버튼의 disabled 속성을 제거
-			if (anyModified) {
-				$('.btn_primary').prop('disabled', false);
-			} else {
-				// 변경된 요소가 없다면 버튼을 비활성화
-				$('.btn_primary').prop('disabled', true);
-			}
+			$('input, textarea').on('input', function() {
+				var anyModified = false;
+				$('input, textarea').each(function() {
+					if ($(this).val() !== initialValues[this.id]) {
+						anyModified = true;
+						return false;
+					}
+				});
+
+				if (anyModified) {
+					$('.btn_primary').prop('disabled', false);
+				} else {
+					$('.btn_primary').prop('disabled', true);
+				}
+			});
 		});
-	});
 	</script>
 </body>
 </html>
